@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.index.mapper;
@@ -11,6 +12,7 @@ package org.elasticsearch.index.mapper;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.index.LeafReaderContext;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.common.Explicit;
 import org.elasticsearch.common.TriFunction;
 import org.elasticsearch.common.collect.Iterators;
@@ -19,13 +21,18 @@ import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
 import org.elasticsearch.common.util.CollectionUtils;
+import org.elasticsearch.common.util.FeatureFlag;
 import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.xcontent.support.XContentMapValues;
+import org.elasticsearch.index.IndexMode;
+import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.IndexVersion;
+import org.elasticsearch.index.IndexVersions;
 import org.elasticsearch.index.analysis.NamedAnalyzer;
 import org.elasticsearch.script.Script;
 import org.elasticsearch.script.ScriptType;
 import org.elasticsearch.search.lookup.SearchLookup;
+import org.elasticsearch.search.lookup.SourceFilter;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.ToXContentFragment;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -34,9 +41,9 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.support.AbstractXContentParser;
 
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -45,6 +52,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
@@ -54,64 +62,68 @@ import java.util.function.Supplier;
 
 import static org.elasticsearch.core.Strings.format;
 
-public abstract class FieldMapper extends Mapper implements Cloneable {
+public abstract class FieldMapper extends Mapper {
     private static final Logger logger = LogManager.getLogger(FieldMapper.class);
+    public static final Setting<Boolean> IGNORE_MALFORMED_SETTING = Setting.boolSetting("index.mapping.ignore_malformed", settings -> {
+        if (IndexSettings.MODE.get(settings) == IndexMode.LOGSDB
+            && IndexMetadata.SETTING_INDEX_VERSION_CREATED.get(settings).onOrAfter(IndexVersions.ENABLE_IGNORE_MALFORMED_LOGSDB)) {
+            return "true";
+        } else {
+            return "false";
+        }
+    }, Property.IndexScope, Property.ServerlessPublic);
 
-    public static final Setting<Boolean> IGNORE_MALFORMED_SETTING = Setting.boolSetting(
-        "index.mapping.ignore_malformed",
+    public static final Setting<Boolean> COERCE_SETTING = Setting.boolSetting(
+        "index.mapping.coerce",
         false,
-        Property.IndexScope
+        Property.IndexScope,
+        Property.ServerlessPublic
     );
-    public static final Setting<Boolean> COERCE_SETTING = Setting.boolSetting("index.mapping.coerce", false, Property.IndexScope);
 
     protected static final DeprecationLogger deprecationLogger = DeprecationLogger.getLogger(FieldMapper.class);
     @SuppressWarnings("rawtypes")
     static final Parameter<?>[] EMPTY_PARAMETERS = new Parameter[0];
 
-    protected final MappedFieldType mappedFieldType;
-    protected final MultiFields multiFields;
-    protected final CopyTo copyTo;
-    protected final boolean hasScript;
-    protected final OnScriptError onScriptError;
-
     /**
-     * @param simpleName        the leaf name of the mapper
-     * @param mappedFieldType   the MappedFieldType associated with this mapper
      * @param multiFields       sub fields of this mapper
      * @param copyTo            copyTo fields of this mapper
-     */
-    protected FieldMapper(String simpleName, MappedFieldType mappedFieldType, MultiFields multiFields, CopyTo copyTo) {
-        this(simpleName, mappedFieldType, multiFields, copyTo, false, null);
-    }
-
-    /**
-     * @param simpleName        the leaf name of the mapper
-     * @param mappedFieldType   the MappedFieldType associated with this mapper
-     * @param multiFields       sub fields of this mapper
-     * @param copyTo            copyTo fields of this mapper
+     * @param sourceKeepMode   mode for storing the field source in synthetic source mode
      * @param hasScript         whether a script is defined for the field
      * @param onScriptError     the behaviour for when the defined script fails at runtime
      */
-    protected FieldMapper(
-        String simpleName,
-        MappedFieldType mappedFieldType,
+    protected record BuilderParams(
         MultiFields multiFields,
         CopyTo copyTo,
+        Optional<SourceKeepMode> sourceKeepMode,
         boolean hasScript,
         OnScriptError onScriptError
     ) {
+        public static BuilderParams empty() {
+            return empty;
+        }
+
+        private static final BuilderParams empty = new BuilderParams(MultiFields.empty(), CopyTo.empty(), Optional.empty(), false, null);
+    }
+
+    protected final MappedFieldType mappedFieldType;
+    protected final BuilderParams builderParams;
+
+    /**
+     * @param simpleName        the leaf name of the mapper
+     * @param params            initialization params for this field mapper
+     */
+    protected FieldMapper(String simpleName, MappedFieldType mappedFieldType, BuilderParams params) {
         super(simpleName);
+        this.mappedFieldType = mappedFieldType;
+        this.builderParams = params;
+
         // could be blank but not empty on indices created < 8.6.0
         assert mappedFieldType.name().isEmpty() == false;
-        this.mappedFieldType = mappedFieldType;
-        this.multiFields = multiFields;
-        this.copyTo = Objects.requireNonNull(copyTo);
-        this.hasScript = hasScript;
-        this.onScriptError = onScriptError;
+        assert params.copyTo != null;
     }
 
     @Override
-    public String name() {
+    public String fullPath() {
         return fieldType().name();
     }
 
@@ -128,11 +140,15 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
      * List of fields where this field should be copied to
      */
     public CopyTo copyTo() {
-        return copyTo;
+        return builderParams.copyTo;
     }
 
     public MultiFields multiFields() {
-        return multiFields;
+        return builderParams.multiFields;
+    }
+
+    public Optional<SourceKeepMode> sourceKeepMode() {
+        return builderParams.sourceKeepMode;
     }
 
     /**
@@ -156,33 +172,45 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
     }
 
     /**
+     * Whether this mapper can handle an object value during document parsing.
+     * When the subobjects property is set to false, and we encounter an object while
+     * parsing we need a way to understand if its fieldMapper is able to parse an object.
+     * If that's the case we can provide the entire object to the FieldMapper otherwise its
+     * name becomes the part of the dotted field name of each internal value.
+     */
+    protected boolean supportsParsingObject() {
+        return false;
+    }
+
+    /**
      * Parse the field value using the provided {@link DocumentParserContext}.
      */
     public void parse(DocumentParserContext context) throws IOException {
         try {
-            if (hasScript) {
+            if (builderParams.hasScript) {
                 throwIndexingWithScriptParam();
             }
+
             parseCreateField(context);
         } catch (Exception e) {
             rethrowAsDocumentParsingException(context, e);
         }
         // TODO: multi fields are really just copy fields, we just need to expose "sub fields" or something that can be part
         // of the mappings
-        if (multiFields.mappers.length != 0) {
+        if (builderParams.multiFields.mappers.length != 0) {
             doParseMultiFields(context);
         }
     }
 
-    private void doParseMultiFields(DocumentParserContext context) throws IOException {
-        context.path().add(simpleName());
-        for (FieldMapper mapper : multiFields.mappers) {
+    protected void doParseMultiFields(DocumentParserContext context) throws IOException {
+        context.path().add(leafName());
+        for (FieldMapper mapper : builderParams.multiFields.mappers) {
             mapper.parse(context);
         }
         context.path().remove();
     }
 
-    private static void throwIndexingWithScriptParam() {
+    protected static void throwIndexingWithScriptParam() {
         throw new IllegalArgumentException("Cannot index data directly into a field with a [script] parameter");
     }
 
@@ -236,7 +264,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
      * @return whether this field mapper uses a script to generate its values
      */
     public final boolean hasScript() {
-        return hasScript;
+        return builderParams.hasScript;
     }
 
     /**
@@ -257,10 +285,10 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
         try {
             indexScriptValues(searchLookup, readerContext, doc, documentParserContext);
         } catch (Exception e) {
-            if (onScriptError == OnScriptError.CONTINUE) {
-                documentParserContext.addIgnoredField(name());
+            if (builderParams.onScriptError == OnScriptError.CONTINUE) {
+                documentParserContext.addIgnoredField(fullPath());
             } else {
-                throw new DocumentParsingException(XContentLocation.UNKNOWN, "Error executing script on field [" + name() + "]", e);
+                throw new DocumentParsingException(XContentLocation.UNKNOWN, "Error executing script on field [" + fullPath() + "]", e);
             }
         }
     }
@@ -280,22 +308,33 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
         int doc,
         DocumentParserContext documentParserContext
     ) {
-        throw new UnsupportedOperationException("FieldMapper " + name() + " does not support [script]");
+        throw new UnsupportedOperationException("FieldMapper " + fullPath() + " does not support [script]");
     }
 
     @Override
     public Iterator<Mapper> iterator() {
-        return Iterators.forArray(multiFields.mappers);
+        return multiFieldsIterator();
+    }
+
+    protected Iterator<Mapper> multiFieldsIterator() {
+        return Iterators.forArray(builderParams.multiFields.mappers);
+    }
+
+    /**
+     * @return a mapper iterator of all fields that use this field's source path as their source path
+     */
+    public Iterator<Mapper> sourcePathUsedBy() {
+        return multiFieldsIterator();
     }
 
     @Override
     public final void validate(MappingLookup mappers) {
         if (this.copyTo() != null && this.copyTo().copyToFields().isEmpty() == false) {
-            if (mappers.isMultiField(this.name())) {
-                throw new IllegalArgumentException("[copy_to] may not be used to copy from a multi-field: [" + this.name() + "]");
+            if (mappers.isMultiField(this.fullPath())) {
+                throw new IllegalArgumentException("[copy_to] may not be used to copy from a multi-field: [" + this.fullPath() + "]");
             }
 
-            final String sourceScope = mappers.nestedLookup().getNestedParent(this.name());
+            final String sourceScope = mappers.nestedLookup().getNestedParent(this.fullPath());
             for (String copyTo : this.copyTo().copyToFields()) {
                 if (mappers.isMultiField(copyTo)) {
                     throw new IllegalArgumentException("[copy_to] may not be used to copy to a multi-field: [" + copyTo + "]");
@@ -343,50 +382,22 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
      */
     public abstract Builder getMergeBuilder();
 
-    @Override
-    public final FieldMapper merge(Mapper mergeWith, MapperBuilderContext mapperBuilderContext) {
-        if (mergeWith == this) {
-            return this;
-        }
-        if (mergeWith instanceof FieldMapper == false) {
-            throw new IllegalArgumentException(
-                "mapper ["
-                    + name()
-                    + "] cannot be changed from type ["
-                    + contentType()
-                    + "] to ["
-                    + mergeWith.getClass().getSimpleName()
-                    + "]"
-            );
-        }
-        checkIncomingMergeType((FieldMapper) mergeWith);
-
-        Builder builder = getMergeBuilder();
-        if (builder == null) {
-            return (FieldMapper) mergeWith;
-        }
-        Conflicts conflicts = new Conflicts(name());
-        builder.merge((FieldMapper) mergeWith, conflicts, mapperBuilderContext);
-        conflicts.check();
-        return builder.build(mapperBuilderContext);
-    }
-
     protected void checkIncomingMergeType(FieldMapper mergeWith) {
         if (Objects.equals(this.getClass(), mergeWith.getClass()) == false) {
             throw new IllegalArgumentException(
-                "mapper [" + name() + "] cannot be changed from type [" + contentType() + "] to [" + mergeWith.contentType() + "]"
+                "mapper [" + fullPath() + "] cannot be changed from type [" + contentType() + "] to [" + mergeWith.contentType() + "]"
             );
         }
         if (Objects.equals(contentType(), mergeWith.contentType()) == false) {
             throw new IllegalArgumentException(
-                "mapper [" + name() + "] cannot be changed from type [" + contentType() + "] to [" + mergeWith.contentType() + "]"
+                "mapper [" + fullPath() + "] cannot be changed from type [" + contentType() + "] to [" + mergeWith.contentType() + "]"
             );
         }
     }
 
     @Override
     public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
-        builder.startObject(simpleName());
+        builder.startObject(leafName());
         doXContentBody(builder, params);
         return builder.endObject();
     }
@@ -394,14 +405,171 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
     protected void doXContentBody(XContentBuilder builder, Params params) throws IOException {
         builder.field("type", contentType());
         getMergeBuilder().toXContent(builder, params);
-        multiFields.toXContent(builder, params);
-        copyTo.toXContent(builder);
+        builderParams.multiFields.toXContent(builder, params);
+        builderParams.copyTo.toXContent(builder);
+        if (builderParams.sourceKeepMode.isPresent()) {
+            builderParams.sourceKeepMode.get().toXContent(builder);
+        }
     }
 
     protected abstract String contentType();
 
+    @Override
+    public int getTotalFieldsCount() {
+        int sum = 1;
+        for (FieldMapper mapper : builderParams.multiFields.mappers) {
+            sum += mapper.getTotalFieldsCount();
+        }
+        return sum;
+    }
+
     public Map<String, NamedAnalyzer> indexAnalyzers() {
         return Map.of();
+    }
+
+    /**
+     * Returns a {@link SourceLoader.SyntheticVectorsLoader} instance responsible for loading
+     * synthetic vector values from the index.
+     *
+     * @return a {@link SourceLoader.SyntheticVectorsLoader} used to extract synthetic vectors,
+     *         or {@code null} if no loader is provided or applicable in this context
+     */
+    public SourceLoader.SyntheticVectorsLoader syntheticVectorsLoader() {
+        return null;
+    }
+
+    /**
+     * <p>
+     * Specifies the mode of synthetic source support by the mapper.
+     * <br>
+     * This is used to determine if a field mapper has support for
+     * constructing synthetic source.
+     * In case it doesn't (meaning {@link SyntheticSourceMode#FALLBACK}),
+     * we will store raw source data for this field as is
+     * and then use it for synthetic source.
+     * </p>
+     * <p>
+     * This method is final in order to support common use cases like fallback synthetic source and copy_to.
+     * Mappers that need custom support of synthetic source should override {@link #syntheticSourceSupport()}.
+     * </p>
+     * @return {@link SyntheticSourceMode}
+     */
+    final SyntheticSourceMode syntheticSourceMode() {
+        if (hasScript()) {
+            return SyntheticSourceMode.NATIVE;
+        }
+
+        if (builderParams.copyTo.copyToFields().isEmpty() == false) {
+            // When copy_to is used, we need to use fallback logic to store source of the field exactly.
+            // Otherwise, due to possible differences between synthetic source and stored source,
+            // values of fields that are destinations of copy_to would be different after reindexing.
+            return SyntheticSourceMode.FALLBACK;
+        }
+
+        return syntheticSourceSupport().mode();
+    }
+
+    /**
+     * Returns synthetic field loader for the mapper.
+     * If mapper does not support synthetic source, it is handled using generic implementation
+     * in {@link DocumentParser#parseObjectOrField} and {@link ObjectMapper#syntheticFieldLoader(SourceFilter)}.
+     * <br>
+     *
+     * This method is final in order to support common use cases like fallback synthetic source.
+     * Mappers that need custom support of synthetic source should override {@link #syntheticSourceSupport()}.
+     *
+     * @return implementation of {@link SourceLoader.SyntheticFieldLoader}
+     */
+    public final SourceLoader.SyntheticFieldLoader syntheticFieldLoader() {
+        if (hasScript()) {
+            return SourceLoader.SyntheticFieldLoader.NOTHING;
+        }
+
+        if (syntheticSourceMode() == SyntheticSourceMode.FALLBACK) {
+            // Nothing because it is handled at `DocumentParser/ObjectMapper` level.
+            return SourceLoader.SyntheticFieldLoader.NOTHING;
+        }
+
+        return syntheticSourceSupport().loader();
+    }
+
+    /**
+     * <p>
+     * Returns implementation of synthetic source support for the mapper.
+     * <br>
+     * By default (meaning {@link SyntheticSourceSupport.Fallback}),
+     * an exact full copy of parsed field value is stored separately
+     * and used for synthetic source.
+     * </p>
+     * <p>
+     * Field mappers must override this method if they provide
+     * a more efficient field-specific implementation of synthetic source.
+     * </p>
+     * @return {@link SyntheticSourceMode}
+     */
+    protected SyntheticSourceSupport syntheticSourceSupport() {
+        return SyntheticSourceSupport.FALLBACK;
+    }
+
+    /**
+     * Specifies the mode of synthetic source support by the mapper.
+     *
+     * <pre>
+     * {@link SyntheticSourceMode#NATIVE} - mapper natively supports synthetic source, f.e. by constructing it from doc values.
+     *
+     * {@link SyntheticSourceMode#FALLBACK} - mapper does not have native support and uses generic fallback implementation
+     * that stores raw input source data as is.
+     * </pre>
+     */
+    protected enum SyntheticSourceMode {
+        NATIVE,
+        FALLBACK
+    }
+
+    /**
+     * Interface that defines how a field supports synthetic source.
+     */
+    protected sealed interface SyntheticSourceSupport permits SyntheticSourceSupport.Fallback, SyntheticSourceSupport.Native {
+        final class Fallback implements SyntheticSourceSupport {
+            @Override
+            public SyntheticSourceMode mode() {
+                return SyntheticSourceMode.FALLBACK;
+            }
+
+            @Override
+            public SourceLoader.SyntheticFieldLoader loader() {
+                return null;
+            }
+        }
+
+        SyntheticSourceSupport FALLBACK = new Fallback();
+
+        final class Native implements SyntheticSourceSupport {
+            Supplier<SourceLoader.SyntheticFieldLoader> loaderSupplier;
+            private SourceLoader.SyntheticFieldLoader loader;
+
+            @SuppressWarnings("checkstyle:RedundantModifier")
+            public Native(Supplier<SourceLoader.SyntheticFieldLoader> loaderSupplier) {
+                this.loaderSupplier = loaderSupplier;
+            }
+
+            @Override
+            public SyntheticSourceMode mode() {
+                return SyntheticSourceMode.NATIVE;
+            }
+
+            @Override
+            public SourceLoader.SyntheticFieldLoader loader() {
+                if (loader == null) {
+                    loader = loaderSupplier.get();
+                }
+                return loader;
+            }
+        }
+
+        SyntheticSourceMode mode();
+
+        SourceLoader.SyntheticFieldLoader loader();
     }
 
     public static final class MultiFields implements Iterable<FieldMapper>, ToXContent {
@@ -414,41 +582,118 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
 
         public static class Builder {
 
-            private final Map<String, Function<MapperBuilderContext, FieldMapper>> mapperBuilders = new HashMap<>();
+            private final Map<String, FieldMapper.Builder> fieldBuilders = new HashMap<>();
+
+            private boolean hasSyntheticSourceCompatibleKeywordField;
 
             public Builder add(FieldMapper.Builder builder) {
-                mapperBuilders.put(builder.name(), builder::build);
-                return this;
-            }
+                fieldBuilders.put(builder.leafName(), builder);
 
-            public Builder add(FieldMapper mapper) {
-                mapperBuilders.put(mapper.simpleName(), context -> mapper);
-                return this;
-            }
-
-            public Builder update(FieldMapper toMerge, MapperBuilderContext context) {
-                if (mapperBuilders.containsKey(toMerge.simpleName()) == false) {
-                    add(toMerge);
-                } else {
-                    FieldMapper existing = mapperBuilders.get(toMerge.simpleName()).apply(context);
-                    add(existing.merge(toMerge, context));
+                if (builder instanceof KeywordFieldMapper.Builder kwd) {
+                    if ((kwd.hasNormalizer() == false || kwd.isNormalizerSkipStoreOriginalValue())
+                        && (kwd.docValuesParameters().enabled || kwd.isStored())) {
+                        hasSyntheticSourceCompatibleKeywordField = true;
+                    }
                 }
+
                 return this;
+            }
+
+            private void add(FieldMapper mapper) {
+                FieldMapper.Builder builder = mapper.getMergeBuilder();
+                if (builder != null) {
+                    fieldBuilders.put(mapper.leafName(), builder);
+                } else {
+                    fieldBuilders.put(mapper.leafName(), new FieldMapper.Builder(mapper.leafName()) {
+                        @Override
+                        protected Parameter<?>[] getParameters() {
+                            return EMPTY_PARAMETERS;
+                        }
+
+                        @Override
+                        public String contentType() {
+                            return mapper.contentType();
+                        }
+
+                        @Override
+                        public FieldMapper build(MapperBuilderContext context) {
+                            return mapper;
+                        }
+                    });
+                }
+
+                if (mapper instanceof KeywordFieldMapper kwd) {
+                    if (kwd.hasNormalizer() == false && (kwd.fieldType().hasDocValues() || kwd.fieldType().isStored())) {
+                        hasSyntheticSourceCompatibleKeywordField = true;
+                    }
+                }
+            }
+
+            private void update(FieldMapper toMerge, MapperMergeContext context) {
+                if (fieldBuilders.containsKey(toMerge.leafName()) == false) {
+                    if (context.decrementFieldBudgetIfPossible(toMerge.getTotalFieldsCount())) {
+                        add(toMerge);
+                    }
+                } else {
+                    FieldMapper.Builder existingBuilder = fieldBuilders.get(toMerge.leafName());
+                    FieldMapper.Builder incomingBuilder = toMerge.getMergeBuilder();
+                    if (incomingBuilder != null) {
+                        MapperMergeContext childContext = MapperMergeContext.from(context.getMapperBuilderContext(), Long.MAX_VALUE);
+                        Mapper.Builder merged = existingBuilder.mergeWith(incomingBuilder, childContext);
+                        fieldBuilders.put(toMerge.leafName(), (FieldMapper.Builder) merged);
+                    } else {
+                        add(toMerge);
+                    }
+                }
+            }
+
+            void mergeFrom(Builder incoming, MapperMergeContext mergeContext) {
+                for (var entry : incoming.fieldBuilders.entrySet()) {
+                    FieldMapper.Builder incomingBuilder = entry.getValue();
+                    FieldMapper.Builder existingBuilder = fieldBuilders.get(entry.getKey());
+                    if (existingBuilder == null) {
+                        if (mergeContext.decrementFieldBudgetIfPossible(incomingBuilder.getTotalFieldsCount())) {
+                            fieldBuilders.put(entry.getKey(), incomingBuilder);
+                            updateSyntheticSourceCompatibleKeywordField(incomingBuilder);
+                        }
+                    } else {
+                        MapperMergeContext childContext = MapperMergeContext.from(mergeContext.getMapperBuilderContext(), Long.MAX_VALUE);
+                        Mapper.Builder merged = existingBuilder.mergeWith(incomingBuilder, childContext);
+                        fieldBuilders.put(entry.getKey(), (FieldMapper.Builder) merged);
+                    }
+                }
+            }
+
+            private void updateSyntheticSourceCompatibleKeywordField(FieldMapper.Builder builder) {
+                if (builder instanceof KeywordFieldMapper.Builder kwd) {
+                    if ((kwd.hasNormalizer() == false || kwd.isNormalizerSkipStoreOriginalValue())
+                        && (kwd.docValuesParameters().enabled || kwd.isStored())) {
+                        hasSyntheticSourceCompatibleKeywordField = true;
+                    }
+                }
             }
 
             public boolean hasMultiFields() {
-                return mapperBuilders.isEmpty() == false;
+                return fieldBuilders.isEmpty() == false;
+            }
+
+            int size() {
+                return fieldBuilders.size();
+            }
+
+            public boolean hasSyntheticSourceCompatibleKeywordField() {
+                return hasSyntheticSourceCompatibleKeywordField;
             }
 
             public MultiFields build(Mapper.Builder mainFieldBuilder, MapperBuilderContext context) {
-                if (mapperBuilders.isEmpty()) {
+                if (fieldBuilders.isEmpty()) {
                     return empty();
                 } else {
-                    FieldMapper[] mappers = new FieldMapper[mapperBuilders.size()];
-                    context = context.createChildContext(mainFieldBuilder.name());
+                    FieldMapper[] mappers = new FieldMapper[fieldBuilders.size()];
+                    context = context.createChildContext(mainFieldBuilder.leafName(), null);
                     int i = 0;
-                    for (Map.Entry<String, Function<MapperBuilderContext, FieldMapper>> entry : this.mapperBuilders.entrySet()) {
-                        mappers[i++] = entry.getValue().apply(context);
+                    for (FieldMapper.Builder builder : fieldBuilders.values()) {
+                        mappers[i++] = builder.build(context);
                     }
                     return new MultiFields(mappers);
                 }
@@ -460,7 +705,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
         private MultiFields(FieldMapper[] mappers) {
             this.mappers = mappers;
             // sort for consistent iteration order + serialization
-            Arrays.sort(this.mappers, Comparator.comparing(FieldMapper::name));
+            Arrays.sort(this.mappers, Comparator.comparing(FieldMapper::fullPath));
         }
 
         public void parse(FieldMapper mainField, DocumentParserContext context, Supplier<DocumentParserContext> multiFieldContextSupplier)
@@ -470,7 +715,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             if (mappers.length == 0) {
                 return;
             }
-            context.path().add(mainField.simpleName());
+            context.path().add(mainField.leafName());
             for (FieldMapper mapper : mappers) {
                 mapper.parse(multiFieldContextSupplier.get());
             }
@@ -500,7 +745,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
      */
     public static class CopyTo {
 
-        private static final CopyTo EMPTY = new CopyTo(Collections.emptyList());
+        private static final CopyTo EMPTY = new CopyTo(List.of());
 
         public static CopyTo empty() {
             return EMPTY;
@@ -509,7 +754,14 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
         private final List<String> copyToFields;
 
         private CopyTo(List<String> copyToFields) {
-            this.copyToFields = copyToFields;
+            this.copyToFields = List.copyOf(copyToFields);
+        }
+
+        public CopyTo withAddedFields(List<String> fields) {
+            if (fields.isEmpty()) {
+                return this;
+            }
+            return new CopyTo(CollectionUtils.concatLists(copyToFields, fields));
         }
 
         public XContentBuilder toXContent(XContentBuilder builder) throws IOException {
@@ -521,31 +773,6 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
                 builder.endArray();
             }
             return builder;
-        }
-
-        public static class Builder {
-            private final List<String> copyToBuilders = new ArrayList<>();
-
-            public Builder add(String field) {
-                copyToBuilders.add(field);
-                return this;
-            }
-
-            public boolean hasValues() {
-                return copyToBuilders.isEmpty() == false;
-            }
-
-            public CopyTo build() {
-                if (copyToBuilders.isEmpty()) {
-                    return EMPTY;
-                }
-                return new CopyTo(Collections.unmodifiableList(copyToBuilders));
-            }
-
-            public void reset(CopyTo copyTo) {
-                copyToBuilders.clear();
-                copyToBuilders.addAll(copyTo.copyToFields);
-            }
         }
 
         public List<String> copyToFields() {
@@ -582,7 +809,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
      * A configurable parameter for a field mapper
      * @param <T> the type of the value the parameter holds
      */
-    public static final class Parameter<T> implements Supplier<T> {
+    public static class Parameter<T> implements Supplier<T> {
 
         public final String name;
         private List<String> deprecatedNames = List.of();
@@ -664,6 +891,10 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
 
         public boolean isConfigured() {
             return isSet && Objects.equals(value, getDefaultValue()) == false;
+        }
+
+        public boolean isSet() {
+            return isSet;
         }
 
         /**
@@ -785,8 +1016,16 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             setValue(parser.apply(field, context, in));
         }
 
-        private void merge(FieldMapper toMerge, Conflicts conflicts) {
-            T value = initializer.apply(toMerge);
+        @SuppressWarnings("unchecked")
+        void mergeFrom(Parameter<?> other, Conflicts conflicts) {
+            mergeValue((T) other.getValue(), conflicts);
+        }
+
+        void freezeValue() {
+            setValue(getValue());
+        }
+
+        private void mergeValue(T value, Conflicts conflicts) {
             T current = getValue();
             if (mergeValidator.canMerge(current, value, conflicts)) {
                 setValue(value);
@@ -958,6 +1197,25 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             T defaultValue,
             Class<T> enumClass
         ) {
+            return enumParam(name, updateable, initializer, (Supplier<T>) () -> defaultValue, enumClass);
+        }
+
+        /**
+         * Defines a parameter that takes any of the values of an enumeration.
+         *
+         * @param name          the parameter name
+         * @param updateable    whether the parameter can be changed by a mapping update
+         * @param initializer   a function that reads the parameter value from an existing mapper
+         * @param defaultValue  a supplier for the default value, to be used if the parameter is undefined in a mapping
+         * @param enumClass     the enumeration class the parameter takes values from
+         */
+        public static <T extends Enum<T>> Parameter<T> enumParam(
+            String name,
+            boolean updateable,
+            Function<FieldMapper, T> initializer,
+            Supplier<T> defaultValue,
+            Class<T> enumClass
+        ) {
             Set<T> acceptedValues = EnumSet.allOf(enumClass);
             return restrictedEnumParam(name, updateable, initializer, defaultValue, enumClass, acceptedValues);
         }
@@ -980,15 +1238,42 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             Class<T> enumClass,
             Set<T> acceptedValues
         ) {
+            return restrictedEnumParam(name, updateable, initializer, (Supplier<T>) () -> defaultValue, enumClass, acceptedValues);
+        }
+
+        /**
+         * Defines a parameter that takes one of a restricted set of values from an enumeration.
+         *
+         * @param name            the parameter name
+         * @param updateable      whether the parameter can be changed by a mapping update
+         * @param initializer     a function that reads the parameter value from an existing mapper
+         * @param defaultValue    a supplier for the default value, to be used if the parameter is undefined in a mapping
+         * @param enumClass       the enumeration class the parameter takes values from
+         * @param acceptedValues  the set of values that the parameter can take
+         */
+        public static <T extends Enum<T>> Parameter<T> restrictedEnumParam(
+            String name,
+            boolean updateable,
+            Function<FieldMapper, T> initializer,
+            Supplier<T> defaultValue,
+            Class<T> enumClass,
+            Set<T> acceptedValues
+        ) {
             assert acceptedValues.size() > 0;
-            return new Parameter<>(name, updateable, () -> defaultValue, (n, c, o) -> {
+            assert defaultValue != null;
+            return new Parameter<>(name, updateable, defaultValue, (n, c, o) -> {
                 if (o == null) {
-                    return defaultValue;
+                    return defaultValue.get();
                 }
                 EnumSet<T> enumSet = EnumSet.allOf(enumClass);
                 for (T t : enumSet) {
                     // the string representation may differ from the actual name of the enum type (e.g. lowercase vs uppercase)
                     if (t.toString().equals(o.toString())) {
+                        if (acceptedValues.contains(t) == false) {
+                            throw new MapperParsingException(
+                                "Unknown value [" + o + "] for field [" + name + "] - accepted values are " + acceptedValues
+                            );
+                        }
                         return t;
                     }
                 }
@@ -1047,7 +1332,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             Function<FieldMapper, NamedAnalyzer> initializer,
             Supplier<NamedAnalyzer> defaultAnalyzer
         ) {
-            return analyzerParam(name, updateable, initializer, defaultAnalyzer, IndexVersion.CURRENT);
+            return analyzerParam(name, updateable, initializer, defaultAnalyzer, IndexVersion.current());
         }
 
         /**
@@ -1057,7 +1342,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             return new Parameter<>(
                 "meta",
                 true,
-                Collections::emptyMap,
+                Map::of,
                 (n, c, o) -> TypeParsers.parseMeta(n, o),
                 m -> m.fieldType().meta(),
                 XContentBuilder::stringStringMap,
@@ -1073,12 +1358,62 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             return Parameter.boolParam("index", false, initializer, defaultValue);
         }
 
+        public static Parameter<Boolean> indexParam(
+            Function<FieldMapper, Boolean> initializer,
+            IndexSettings indexSettings,
+            Supplier<Boolean> isDimension
+        ) {
+            return Parameter.boolParam(
+                "index",
+                false,
+                initializer,
+                () -> useTimeSeriesDocValuesSkippers(indexSettings, isDimension.get()) == false
+            );
+        }
+
+        public static boolean useTimeSeriesDocValuesSkippers(IndexSettings indexSettings, boolean isDimension) {
+            if (indexSettings.useDocValuesSkipper() == false) {
+                return false;
+            }
+            if (indexSettings.getMode() == IndexMode.TIME_SERIES) {
+                if (isDimension) {
+                    return indexSettings.getIndexVersionCreated().onOrAfter(IndexVersions.TIME_SERIES_DIMENSIONS_USE_SKIPPERS);
+                }
+                return indexSettings.getIndexVersionCreated().onOrAfter(IndexVersions.TIME_SERIES_ALL_FIELDS_USE_SKIPPERS);
+            }
+            return false;
+        }
+
         public static Parameter<Boolean> storeParam(Function<FieldMapper, Boolean> initializer, boolean defaultValue) {
+            return Parameter.boolParam("store", false, initializer, defaultValue);
+        }
+
+        public static Parameter<Boolean> storeParam(Function<FieldMapper, Boolean> initializer, Supplier<Boolean> defaultValue) {
             return Parameter.boolParam("store", false, initializer, defaultValue);
         }
 
         public static Parameter<Boolean> docValuesParam(Function<FieldMapper, Boolean> initializer, boolean defaultValue) {
             return Parameter.boolParam("doc_values", false, initializer, defaultValue);
+        }
+
+        public static Parameter<Boolean> normsParam(Function<FieldMapper, Boolean> initializer, boolean defaultValue) {
+            // norms can be updated from 'true' to 'false' but not vice-versa
+            return Parameter.boolParam("norms", true, initializer, defaultValue)
+                .setMergeValidator((prev, curr, c) -> prev == curr || (prev && curr == false));
+        }
+
+        public static Parameter<Boolean> normsParam(Function<FieldMapper, Boolean> initializer, Supplier<Boolean> defaultValueSupplier) {
+            // norms can be updated from 'true' to 'false' but not vice-versa
+            return Parameter.boolParam("norms", true, initializer, defaultValueSupplier)
+                .setMergeValidator((prev, curr, c) -> prev == curr || (prev && curr == false));
+        }
+
+        public static Parameter<Integer> ignoreAboveParam(Function<FieldMapper, Integer> initializer, int defaultValue) {
+            return Parameter.intParam("ignore_above", true, initializer, defaultValue).addValidator(v -> {
+                if (v < 0) {
+                    throw new IllegalArgumentException("[ignore_above] must be positive, got [" + v + "]");
+                }
+            });
         }
 
         /**
@@ -1114,12 +1449,213 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
         }
     }
 
+    public static final class DocValuesParameter extends Parameter<DocValuesParameter.Values> {
+        public static final String PARAMETER_NAME = "doc_values";
+
+        public static FeatureFlag EXTENDED_DOC_VALUES_PARAMS_FF = new FeatureFlag("extended_doc_values_options");
+
+        public record Values(boolean enabled, Cardinality cardinality, MultiValue multiValue) {
+            public enum Cardinality {
+                LOW,
+                HIGH;
+
+                @Override
+                public String toString() {
+                    return name().toLowerCase(Locale.ROOT);
+                }
+            }
+
+            /**
+             * Controls how multiple values per document are handled in doc values.
+             * <p>
+             * {@code NO} restricts the field to a single value per document.
+             * {@code SORTED} stores multiple values sorted per document (numeric types).
+             * {@code SORTED_SET} stores multiple values sorted and deduplicated per document (keyword/IP types).
+             * {@code ARRAYS} allows multiple values, keeps original ordering, and supports null values.
+             */
+            public enum MultiValue {
+                NO,
+                SORTED,
+                SORTED_SET,
+                ARRAYS;
+
+                @Override
+                public String toString() {
+                    return name().toLowerCase(Locale.ROOT);
+                }
+            }
+
+            public static Values DISABLED = new Values(false, Cardinality.LOW, MultiValue.SORTED);
+        }
+
+        public final Optional<Parameter<Values.Cardinality>> cardinalityParameter;
+        public final Parameter<Values.MultiValue> multiValueParameter;
+
+        /**
+         * Factory for field types that do not support cardinality. Use for numeric types that use {@code SortedNumericDocValuesField}.
+         */
+        public static DocValuesParameter sorted(Values defaultValue, Function<FieldMapper, Values> initializer) {
+            return new DocValuesParameter(
+                defaultValue,
+                initializer,
+                false,
+                EnumSet.of(Values.MultiValue.NO, Values.MultiValue.SORTED, Values.MultiValue.ARRAYS)
+            );
+        }
+
+        /**
+         * Factory for field types that do not support cardinality. Use for types that use {@code SortedSetDocValuesField}
+         * (e.g. IP, flattened).
+         */
+        public static DocValuesParameter sortedSet(Values defaultValue, Function<FieldMapper, Values> initializer) {
+            return new DocValuesParameter(
+                defaultValue,
+                initializer,
+                false,
+                EnumSet.of(Values.MultiValue.NO, Values.MultiValue.SORTED_SET, Values.MultiValue.ARRAYS)
+            );
+        }
+
+        /**
+         * Factory for field types that support cardinality. Use for keyword fields.
+         */
+        public static DocValuesParameter sortedSetWithCardinality(Values defaultValue, Function<FieldMapper, Values> initializer) {
+            return new DocValuesParameter(
+                defaultValue,
+                initializer,
+                true,
+                EnumSet.of(Values.MultiValue.NO, Values.MultiValue.SORTED_SET, Values.MultiValue.ARRAYS)
+            );
+        }
+
+        /**
+         * Factory for field types that support cardinality. Use for text-family fields (text, match_only_text).
+         */
+        public static DocValuesParameter arraysWithCardinality(Values defaultValue, Function<FieldMapper, Values> initializer) {
+            return new DocValuesParameter(defaultValue, initializer, true, EnumSet.of(Values.MultiValue.NO, Values.MultiValue.ARRAYS));
+        }
+
+        private DocValuesParameter(
+            Values defaultValue,
+            Function<FieldMapper, Values> initializer,
+            boolean supportsCardinality,
+            Set<Values.MultiValue> allowedMultiValues
+        ) {
+            super(PARAMETER_NAME, false, () -> defaultValue, null, initializer, null, Values::toString);
+
+            if (supportsCardinality) {
+                cardinalityParameter = Optional.of(
+                    Parameter.enumParam(
+                        "cardinality",
+                        false,
+                        m -> initializer.apply(m).cardinality,
+                        defaultValue.cardinality,
+                        Values.Cardinality.class
+                    )
+                );
+            } else {
+                cardinalityParameter = Optional.empty();
+            }
+
+            multiValueParameter = Parameter.restrictedEnumParam(
+                "multi_value",
+                false,
+                m -> initializer.apply(m).multiValue,
+                defaultValue.multiValue,
+                Values.MultiValue.class,
+                allowedMultiValues
+            );
+        }
+
+        /**
+         * Parses the doc_values parameter from the field mapping.
+         * <p>
+         * Doc values can be configured in the following ways:
+         * <ul>
+         *   <li>{@code "doc_values": false} - doc_values disabled</li>
+         *   <li>{@code "doc_values": true} - doc_values enabled with defaults</li>
+         *   <li>{@code "doc_values": { "cardinality": "low" }} - doc_values enabled with LOW cardinality</li>
+         *   <li>{@code "doc_values": { "cardinality": "high" }} - doc_values enabled with HIGH cardinality</li>
+         *   <li>{@code "doc_values": { "multi_value": "no" }} - single value enforced per document</li>
+         *   <li>{@code "doc_values": { "multi_value": "sorted" }} - multiple values sorted per document</li>
+         *   <li>{@code "doc_values": { "multi_value": "sorted_set" }} - multiple values sorted and deduplicated per document</li>
+         *   <li>{@code "doc_values": { "multi_value": "arrays" }} - multiple values stored as-is (no sorting or deduplication)</li>
+         * </ul>
+         * <p>
+         * Not all {@code multi_value} options are supported by every field type; unsupported options are rejected at mapping parse time.
+         * <p>
+         * The presence of {@code doc_values} as a map indicates the user wants doc_values enabled. The map format allows specifying
+         * additional cardinality and multi_value settings.
+         */
+        @Override
+        public void parse(String field, MappingParserContext context, Object value) {
+            if (value instanceof Map<?, ?> valueMap && EXTENDED_DOC_VALUES_PARAMS_FF.isEnabled()) {
+                cardinalityParameter.ifPresent(p -> p.parse(field, context, valueMap.get(p.name)));
+                multiValueParameter.parse(field, context, valueMap.get(multiValueParameter.name));
+
+                setValue(
+                    new Values(
+                        true,
+                        cardinalityParameter.map(Parameter::getValue).orElse(getDefaultValue().cardinality()),
+                        multiValueParameter.getValue()
+                    )
+                );
+            } else {
+                if (XContentMapValues.nodeBooleanValue(value, name)) {
+                    setValue(new Values(true, getDefaultValue().cardinality(), getDefaultValue().multiValue()));
+                } else {
+                    setValue(Values.DISABLED);
+                }
+            }
+        }
+
+        @Override
+        public void setValue(Values value) {
+            super.setValue(value);
+            cardinalityParameter.ifPresent(p -> p.setValue(value.cardinality));
+            multiValueParameter.setValue(value.multiValue);
+        }
+
+        protected void toXContent(XContentBuilder builder, boolean includeDefaults) throws IOException {
+            Values value = getValue();
+            if (includeDefaults || isConfigured()) {
+                if (value.enabled == false) {
+                    builder.field(name, false);
+                } else if (EXTENDED_DOC_VALUES_PARAMS_FF.isEnabled() == false) {
+                    builder.field(name, true);
+                } else {
+                    boolean cardinalityConfigured = cardinalityParameter.map(Parameter::isConfigured).orElse(false);
+                    boolean multiValueConfigured = multiValueParameter.isConfigured();
+                    if (includeDefaults == false && cardinalityConfigured == false && multiValueConfigured == false) {
+                        // no sub-parameters were explicitly set; use the boolean shorthand to match the original source
+                        builder.field(name, true);
+                    } else {
+                        builder.startObject(name);
+                        cardinalityParameter.ifPresent(p -> {
+                            if (includeDefaults || p.isConfigured()) {
+                                try {
+                                    builder.field(p.name, value.cardinality);
+                                } catch (IOException e) {
+                                    throw new UncheckedIOException(e);
+                                }
+                            }
+                        });
+                        if (includeDefaults || multiValueConfigured) {
+                            builder.field(multiValueParameter.name, value.multiValue);
+                        }
+                        builder.endObject();
+                    }
+                }
+            }
+        }
+    }
+
     public static final class Conflicts {
 
         private final String mapperName;
         private final List<String> conflicts = new ArrayList<>();
 
-        Conflicts(String mapperName) {
+        public Conflicts(String mapperName) {
             this.mapperName = mapperName;
         }
 
@@ -1131,7 +1667,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             conflicts.add("Cannot update parameter [" + parameter + "] from [" + existing + "] to [" + toMerge + "]");
         }
 
-        void check() {
+        public void check() {
             if (conflicts.isEmpty()) {
                 return;
             }
@@ -1147,13 +1683,21 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
     public abstract static class Builder extends Mapper.Builder implements ToXContentFragment {
 
         protected final MultiFields.Builder multiFieldsBuilder = new MultiFields.Builder();
-        protected final CopyTo.Builder copyTo = new CopyTo.Builder();
+        protected CopyTo copyTo = CopyTo.EMPTY;
+        protected Optional<SourceKeepMode> sourceKeepMode = Optional.empty();
+        protected boolean hasScript = false;
+        protected OnScriptError onScriptError = null;
 
         /**
          * Creates a new Builder with a field name
          */
         protected Builder(String name) {
             super(name);
+        }
+
+        @Override
+        int getTotalFieldsCount() {
+            return 1 + multiFieldsBuilder.size();
         }
 
         /**
@@ -1163,22 +1707,21 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             for (Parameter<?> param : getParameters()) {
                 param.init(initializer);
             }
-            for (FieldMapper subField : initializer.multiFields.mappers) {
+            for (FieldMapper subField : initializer.builderParams.multiFields.mappers) {
                 multiFieldsBuilder.add(subField);
             }
+            this.copyTo = initializer.builderParams.copyTo;
+            this.sourceKeepMode = initializer.builderParams.sourceKeepMode;
             return this;
         }
 
-        protected void merge(FieldMapper in, Conflicts conflicts, MapperBuilderContext mapperBuilderContext) {
-            for (Parameter<?> param : getParameters()) {
-                param.merge(in, conflicts);
-            }
-            MapperBuilderContext childContext = mapperBuilderContext.createChildContext(in.simpleName());
-            for (FieldMapper newSubField : in.multiFields.mappers) {
-                multiFieldsBuilder.update(newSubField, childContext);
-            }
-            this.copyTo.reset(in.copyTo);
-            validate();
+        public Builder addMultiField(FieldMapper.Builder builder) {
+            this.multiFieldsBuilder.add(builder);
+            return this;
+        }
+
+        protected BuilderParams builderParams(Mapper.Builder mainFieldBuilder, MapperBuilderContext context) {
+            return new BuilderParams(multiFieldsBuilder.build(mainFieldBuilder, context), copyTo, sourceKeepMode, hasScript, onScriptError);
         }
 
         protected final void validate() {
@@ -1192,14 +1735,82 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
          */
         protected abstract Parameter<?>[] getParameters();
 
+        /**
+         * @return the content type name for this field mapper builder, matching the value
+         *         returned by {@link FieldMapper#contentType()} on the built mapper
+         */
+        public abstract String contentType();
+
+        @Override
+        public Mapper.Builder mergeWith(Mapper.Builder incoming, MapperMergeContext mergeContext) {
+            MapperBuilderContext builderContext = mergeContext.getMapperBuilderContext();
+            if (incoming instanceof NestedObjectMapper.Builder) {
+                MapperErrors.throwNestedMappingConflictError(builderContext.buildFullName(incoming.leafName()));
+            } else if (incoming instanceof ObjectMapper.Builder) {
+                MapperErrors.throwObjectMappingConflictError(builderContext.buildFullName(incoming.leafName()));
+            }
+            if (builderContext.getMergeReason() == MapperService.MergeReason.INDEX_TEMPLATE) {
+                return incoming;
+            }
+            if (incoming instanceof FieldMapper.Builder == false) {
+                throw new IllegalArgumentException(
+                    "mapper ["
+                        + builderContext.buildFullName(leafName())
+                        + "] cannot be changed from type ["
+                        + contentType()
+                        + "] to ["
+                        + incoming.getClass().getSimpleName()
+                        + "]"
+                );
+            }
+            FieldMapper.Builder incomingField = (FieldMapper.Builder) incoming;
+            String fullName = builderContext.buildFullName(leafName());
+            if (Objects.equals(this.getClass(), incomingField.getClass()) == false
+                || Objects.equals(contentType(), incomingField.contentType()) == false) {
+                if (builderContext.getMergeReason().isAutoUpdate()) {
+                    return this;
+                }
+                throwMergeTypeConflict(incomingField, fullName);
+            }
+            Conflicts conflicts = new Conflicts(fullName);
+            mergeFromBuilder(incomingField, conflicts, mergeContext);
+            conflicts.check();
+            return this;
+        }
+
+        /**
+         * Throws an error when the incoming builder has a different class or content type.
+         * Subclasses can override to provide more specific error messages.
+         */
+        protected void throwMergeTypeConflict(FieldMapper.Builder incoming, String fullName) {
+            throw new IllegalArgumentException(
+                "mapper [" + fullName + "] cannot be changed from type [" + contentType() + "] to [" + incoming.contentType() + "]"
+            );
+        }
+
+        protected void mergeFromBuilder(FieldMapper.Builder incoming, Conflicts conflicts, MapperMergeContext mergeContext) {
+            Parameter<?>[] myParams = getParameters();
+            Parameter<?>[] theirParams = incoming.getParameters();
+            // Freeze parameter values before merging to prevent dynamic defaults from
+            // changing mid-merge when earlier parameters are updated (e.g., normalizer
+            // changing affects normalizer_skip_store_original_value's default)
+            for (Parameter<?> param : myParams) {
+                param.freezeValue();
+            }
+            for (int i = 0; i < myParams.length; i++) {
+                myParams[i].mergeFrom(theirParams[i], conflicts);
+            }
+            MapperMergeContext childContext = mergeContext.createChildContext(incoming.leafName(), null);
+            multiFieldsBuilder.mergeFrom(incoming.multiFieldsBuilder, childContext);
+            this.copyTo = incoming.copyTo;
+            this.sourceKeepMode = incoming.sourceKeepMode;
+            validate();
+        }
+
         @Override
         public abstract FieldMapper build(MapperBuilderContext context);
 
-        protected void addScriptValidation(
-            Parameter<Script> scriptParam,
-            Parameter<Boolean> indexParam,
-            Parameter<Boolean> docValuesParam
-        ) {
+        protected void addScriptValidation(Parameter<Script> scriptParam, Parameter<Boolean> indexParam, Supplier<Boolean> docValuesParam) {
             scriptParam.addValidator(s -> {
                 if (s != null && indexParam.get() == false && docValuesParam.get() == false) {
                     throw new MapperParsingException("Cannot define script on field with index:false and doc_values:false");
@@ -1207,7 +1818,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
                 if (s != null && multiFieldsBuilder.hasMultiFields()) {
                     throw new MapperParsingException("Cannot define multifields on a field with a script");
                 }
-                if (s != null && copyTo.hasValues()) {
+                if (s != null && copyTo.copyToFields().isEmpty() == false) {
                     throw new MapperParsingException("Cannot define copy_to parameter on a field with a script");
                 }
             });
@@ -1255,12 +1866,12 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
                         continue;
                     }
                     case "copy_to" -> {
-                        TypeParsers.parseCopyFields(propNode).forEach(copyTo::add);
+                        copyTo = copyTo.withAddedFields(TypeParsers.parseCopyFields(propNode));
                         iterator.remove();
                         continue;
                     }
                     case "boost" -> {
-                        if (parserContext.indexVersionCreated().onOrAfter(IndexVersion.V_8_0_0)) {
+                        if (parserContext.indexVersionCreated().onOrAfter(IndexVersions.V_8_0_0)) {
                             throw new MapperParsingException("Unknown parameter [boost] on mapper [" + name + "]");
                         }
                         deprecationLogger.warn(
@@ -1269,6 +1880,11 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
                             "Parameter [boost] on field [{}] is deprecated and has no effect",
                             name
                         );
+                        iterator.remove();
+                        continue;
+                    }
+                    case SYNTHETIC_SOURCE_KEEP_PARAM -> {
+                        sourceKeepMode = Optional.of(SourceKeepMode.from(XContentMapValues.nodeStringValue(propNode)));
                         iterator.remove();
                         continue;
                     }
@@ -1304,7 +1920,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
                         iterator.remove();
                         continue;
                     }
-                    if (parserContext.isFromDynamicTemplate() && parserContext.indexVersionCreated().before(IndexVersion.V_8_0_0)) {
+                    if (parserContext.isFromDynamicTemplate() && parserContext.indexVersionCreated().before(IndexVersions.V_8_0_0)) {
                         // The parameter is unknown, but this mapping is from a dynamic template.
                         // Until 7.x it was possible to use unknown parameters there, so for bwc we need to ignore it
                         deprecationLogger.warn(
@@ -1351,11 +1967,55 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
         private static final Set<String> DEPRECATED_PARAMS = Set.of("store", "meta", "index", "doc_values", "index_options", "similarity");
 
         private static boolean isDeprecatedParameter(String propName, IndexVersion indexCreatedVersion) {
-            if (indexCreatedVersion.onOrAfter(IndexVersion.V_8_0_0)) {
+            if (indexCreatedVersion.onOrAfter(IndexVersions.V_8_0_0)) {
                 return false;
             }
             return DEPRECATED_PARAMS.contains(propName);
         }
+    }
+
+    /**
+     * Creates mappers for fields that can act as time-series dimensions.
+     */
+    public abstract static class DimensionBuilder extends Builder {
+
+        private boolean inheritDimensionParameterFromParentObject = false;
+
+        public DimensionBuilder(String name) {
+            super(name);
+        }
+
+        void setInheritDimensionParameterFromParentObject() {
+            this.inheritDimensionParameterFromParentObject = true;
+        }
+
+        protected boolean inheritDimensionParameterFromParentObject(MapperBuilderContext context) {
+            return inheritDimensionParameterFromParentObject || context.parentObjectContainsDimensions();
+        }
+    }
+
+    /**
+     * Creates mappers for fields that require additional context for supporting synthetic source.
+     */
+    public abstract static class TextFamilyBuilder extends Builder {
+
+        private final IndexVersion indexCreatedVersion;
+        private final boolean isWithinMultiField;
+
+        protected TextFamilyBuilder(String name, IndexVersion indexCreatedVersion, boolean isWithinMultiField) {
+            super(name);
+            this.indexCreatedVersion = indexCreatedVersion;
+            this.isWithinMultiField = isWithinMultiField;
+        }
+
+        public IndexVersion indexCreatedVersion() {
+            return indexCreatedVersion;
+        }
+
+        public boolean isWithinMultiField() {
+            return isWithinMultiField;
+        }
+
     }
 
     public static BiConsumer<String, MappingParserContext> notInMultiFields(String type) {
@@ -1364,6 +2024,20 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
                 throw new MapperParsingException("Field [" + n + "] of type [" + type + "] can't be used in multifields");
             }
         };
+    }
+
+    public static BiConsumer<String, MappingParserContext> notFromDynamicTemplates(String type) {
+        return (n, c) -> {
+            if (c.isFromDynamicTemplate()) {
+                throw new MapperParsingException("Field [" + n + "] of type [" + type + "] can't be used in dynamic templates");
+            }
+        };
+    }
+
+    private static final IndexVersion MINIMUM_LEGACY_COMPATIBILITY_VERSION = IndexVersion.fromId(5000099);
+
+    public static TypeParser createTypeParserWithLegacySupport(BiFunction<String, MappingParserContext, Builder> builderFunction) {
+        return new TypeParser(builderFunction, MINIMUM_LEGACY_COMPATIBILITY_VERSION);
     }
 
     /**
@@ -1380,14 +2054,14 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
          * @param builderFunction a function that produces a Builder from a name and parsercontext
          */
         public TypeParser(BiFunction<String, MappingParserContext, Builder> builderFunction) {
-            this(builderFunction, (n, c) -> {}, IndexVersion.MINIMUM_COMPATIBLE);
+            this(builderFunction, (n, c) -> {}, IndexVersions.MINIMUM_READONLY_COMPATIBLE);
         }
 
         /**
-         * Variant of {@link #TypeParser(BiFunction)} that allows to defining a minimumCompatibilityVersion to
+         * Variant of {@link #TypeParser(BiFunction)} that allows to define a minimumCompatibilityVersion to
          * allow parsing mapping definitions of legacy indices (see {@link Mapper.TypeParser#supportsVersion(IndexVersion)}).
          */
-        public TypeParser(BiFunction<String, MappingParserContext, Builder> builderFunction, IndexVersion minimumCompatibilityVersion) {
+        private TypeParser(BiFunction<String, MappingParserContext, Builder> builderFunction, IndexVersion minimumCompatibilityVersion) {
             this(builderFunction, (n, c) -> {}, minimumCompatibilityVersion);
         }
 
@@ -1395,7 +2069,14 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             BiFunction<String, MappingParserContext, Builder> builderFunction,
             BiConsumer<String, MappingParserContext> contextValidator
         ) {
-            this(builderFunction, contextValidator, IndexVersion.MINIMUM_COMPATIBLE);
+            this(builderFunction, contextValidator, IndexVersions.MINIMUM_READONLY_COMPATIBLE);
+        }
+
+        public TypeParser(
+            BiFunction<String, MappingParserContext, Builder> builderFunction,
+            List<BiConsumer<String, MappingParserContext>> contextValidator
+        ) {
+            this(builderFunction, (n, c) -> contextValidator.forEach(v -> v.accept(n, c)), IndexVersions.MINIMUM_READONLY_COMPATIBLE);
         }
 
         private TypeParser(
