@@ -7,15 +7,17 @@
 
 package org.elasticsearch.xpack.core.transform.transforms;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionRequestValidationException;
 import org.elasticsearch.cluster.SimpleDiffable;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
+import org.elasticsearch.common.util.FeatureFlag;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.search.crossproject.CrossProjectModeDecider;
+import org.elasticsearch.transport.RemoteClusterAware;
 import org.elasticsearch.xcontent.ConstructingObjectParser;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xcontent.ObjectParser;
@@ -24,11 +26,11 @@ import org.elasticsearch.xcontent.ToXContentObject;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xpack.core.common.time.TimeUtils;
-import org.elasticsearch.xpack.core.common.validation.SourceDestValidator;
 import org.elasticsearch.xpack.core.common.validation.SourceDestValidator.SourceDestValidation;
 import org.elasticsearch.xpack.core.deprecation.DeprecationIssue;
 import org.elasticsearch.xpack.core.deprecation.DeprecationIssue.Level;
 import org.elasticsearch.xpack.core.security.xcontent.XContentUtils;
+import org.elasticsearch.xpack.core.transform.TransformConfigVersion;
 import org.elasticsearch.xpack.core.transform.TransformDeprecations;
 import org.elasticsearch.xpack.core.transform.TransformField;
 import org.elasticsearch.xpack.core.transform.TransformMessages;
@@ -45,24 +47,25 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 
+import static org.elasticsearch.action.ValidateActions.addValidationError;
 import static org.elasticsearch.xcontent.ConstructingObjectParser.constructorArg;
 import static org.elasticsearch.xcontent.ConstructingObjectParser.optionalConstructorArg;
 
 /**
  * This class holds the configuration details of a data frame transform
  */
-public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeable, ToXContentObject {
+public final class TransformConfig implements SimpleDiffable<TransformConfig>, Writeable, ToXContentObject {
 
     /**
      * Version of the last time the config defaults have been changed.
      * Whenever defaults change, we must re-write the config on update in a way it
      * does not change behavior.
      */
-    public static final Version CONFIG_VERSION_LAST_DEFAULTS_CHANGED = Version.V_7_15_0;
+    public static final TransformConfigVersion CONFIG_VERSION_LAST_DEFAULTS_CHANGED = TransformConfigVersion.V_7_15_0;
     public static final String NAME = "data_frame_transform_config";
     public static final ParseField HEADERS = new ParseField("headers");
-    /** Version in which {@code FieldCapabilitiesRequest.runtime_fields} field was introduced. */
-    private static final Version FIELD_CAPS_RUNTIME_MAPPINGS_INTRODUCED_VERSION = Version.V_7_12_0;
+
+    public static final FeatureFlag TRANSFORM_CROSS_PROJECT = new FeatureFlag("transform_cross_project");
 
     /** Specifies all the possible transform functions. */
     public enum Function {
@@ -80,8 +83,8 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         }
     }
 
-    private static final ConstructingObjectParser<TransformConfig, String> STRICT_PARSER = createParser(false);
-    private static final ConstructingObjectParser<TransformConfig, String> LENIENT_PARSER = createParser(true);
+    private static final ConstructingObjectParser<TransformConfig, ParserContext> STRICT_PARSER = createParser(false);
+    private static final ConstructingObjectParser<TransformConfig, ParserContext> LENIENT_PARSER = createParser(true);
     static final int MAX_DESCRIPTION_LENGTH = 1_000;
 
     private final String id;
@@ -96,7 +99,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
     // headers store the user context from the creating user, which allows us to run the transform as this user
     // the header only contains name, groups and other context but no authorization keys
     private Map<String, String> headers;
-    private Version transformVersion;
+    private TransformConfigVersion transformVersion;
     private Instant createTime;
 
     private final PivotConfig pivotConfig;
@@ -108,11 +111,12 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         }
     }
 
-    private static ConstructingObjectParser<TransformConfig, String> createParser(boolean lenient) {
-        ConstructingObjectParser<TransformConfig, String> parser = new ConstructingObjectParser<>(NAME, lenient, (args, optionalId) -> {
+    private static ConstructingObjectParser<TransformConfig, ParserContext> createParser(boolean lenient) {
+        ConstructingObjectParser<TransformConfig, ParserContext> parser = new ConstructingObjectParser<>(NAME, lenient, (args, context) -> {
             String id = (String) args[0];
 
             // if the id has been specified in the body and the path, they must match
+            var optionalId = context.optionalTransformId();
             if (id == null) {
                 id = optionalId;
             } else if (optionalId != null && id.equals(optionalId) == false) {
@@ -177,7 +181,11 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         });
 
         parser.declareString(optionalConstructorArg(), TransformField.ID);
-        parser.declareObject(constructorArg(), (p, c) -> SourceConfig.fromXContent(p, lenient), TransformField.SOURCE);
+        parser.declareObject(
+            constructorArg(),
+            (p, c) -> SourceConfig.fromXContent(p, lenient, c.transformParsingContext()),
+            TransformField.SOURCE
+        );
         parser.declareObject(constructorArg(), (p, c) -> DestConfig.fromXContent(p, lenient), TransformField.DESTINATION);
         parser.declareString(optionalConstructorArg(), TransformField.FREQUENCY);
         parser.declareNamedObject(optionalConstructorArg(), (p, c, n) -> p.namedObject(SyncConfig.class, n, c), TransformField.SYNC);
@@ -232,14 +240,14 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         this.pivotConfig = pivotConfig;
         this.latestConfig = latestConfig;
         this.description = description;
-        this.settings = settings == null ? new SettingsConfig() : settings;
+        this.settings = settings == null ? SettingsConfig.EMPTY : settings;
         this.metadata = metadata;
         this.retentionPolicyConfig = retentionPolicyConfig;
         if (this.description != null && this.description.length() > MAX_DESCRIPTION_LENGTH) {
             throw new IllegalArgumentException("[description] must be less than 1000 characters in length.");
         }
         this.createTime = createTime == null ? null : Instant.ofEpochMilli(createTime.toEpochMilli());
-        this.transformVersion = version == null ? null : Version.fromString(version);
+        this.transformVersion = version == null ? null : TransformConfigVersion.fromString(version);
     }
 
     public TransformConfig(final StreamInput in) throws IOException {
@@ -253,9 +261,9 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         description = in.readOptionalString();
         syncConfig = in.readOptionalNamedWriteable(SyncConfig.class);
         createTime = in.readOptionalInstant();
-        transformVersion = in.readBoolean() ? Version.readVersion(in) : null;
+        transformVersion = in.readBoolean() ? TransformConfigVersion.readVersion(in) : null;
         settings = new SettingsConfig(in);
-        metadata = in.readMap();
+        metadata = in.readGenericMap();
         retentionPolicyConfig = in.readOptionalNamedWriteable(RetentionPolicyConfig.class);
     }
 
@@ -288,11 +296,11 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         return this;
     }
 
-    public Version getVersion() {
+    public TransformConfigVersion getVersion() {
         return transformVersion;
     }
 
-    public TransformConfig setVersion(Version version) {
+    public TransformConfig setVersion(TransformConfigVersion version) {
         this.transformVersion = version;
         return this;
     }
@@ -339,15 +347,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
      * @return version
      */
     public List<SourceDestValidation> getAdditionalSourceDestValidations() {
-        if ((source.getRuntimeMappings() == null || source.getRuntimeMappings().isEmpty()) == false) {
-            SourceDestValidation validation = new SourceDestValidator.RemoteClusterMinimumVersionValidation(
-                FIELD_CAPS_RUNTIME_MAPPINGS_INTRODUCED_VERSION,
-                "source.runtime_mappings field was set"
-            );
-            return Collections.singletonList(validation);
-        } else {
-            return Collections.emptyList();
-        }
+        return List.of();
     }
 
     public ActionRequestValidationException validate(ActionRequestValidationException validationException) {
@@ -366,13 +366,43 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         return validationException;
     }
 
+    public ActionRequestValidationException validateNoCrossProjectWhenCrossProjectIsDisabled(
+        CrossProjectModeDecider crossProjectModeDecider,
+        ActionRequestValidationException validationException
+    ) {
+        if (crossProjectModeDecider.crossProjectEnabled()) {
+            return validateNoCrossProjectWhenCrossProjectFeatureIsDisabled(TRANSFORM_CROSS_PROJECT.isEnabled(), validationException);
+        }
+        return validationException;
+    }
+
+    // visible for testing
+    // remove both this and validateNoCrossProjectWhenCrossProjectIsDisabled when the feature is launched
+    ActionRequestValidationException validateNoCrossProjectWhenCrossProjectFeatureIsDisabled(
+        boolean featureEnabled,
+        ActionRequestValidationException validationException
+    ) {
+        if (featureEnabled == false) {
+            // verify there are no remote indices
+            var indices = getSource().getIndex();
+            var remoteIndices = RemoteClusterAware.getRemoteIndexExpressions(indices);
+            if (remoteIndices.isEmpty() == false) {
+                validationException = addValidationError(
+                    "Cross-project calls are not supported, but remote indices were requested: " + remoteIndices,
+                    validationException
+                );
+            }
+        }
+        return validationException;
+    }
+
     /**
      * Parses the transform configuration for deprecations
      *
      * @param namedXContentRegistry XContent registry required for aggregations and query DSL
      * @return The deprecations of this transform
      */
-    public List<DeprecationIssue> checkForDeprecations(NamedXContentRegistry namedXContentRegistry) {
+    public List<DeprecationIssue> checkForDeprecations(NamedXContentRegistry namedXContentRegistry) throws IOException {
 
         List<DeprecationIssue> deprecations = new ArrayList<>();
 
@@ -402,6 +432,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         if (retentionPolicyConfig != null) {
             retentionPolicyConfig.checkForDeprecations(getId(), namedXContentRegistry, deprecations::add);
         }
+
         return deprecations;
     }
 
@@ -411,7 +442,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         source.writeTo(out);
         dest.writeTo(out);
         out.writeOptionalTimeValue(frequency);
-        out.writeMap(headers, StreamOutput::writeString, StreamOutput::writeString);
+        out.writeMap(headers, StreamOutput::writeString);
         out.writeOptionalWriteable(pivotConfig);
         out.writeOptionalWriteable(latestConfig);
         out.writeOptionalString(description);
@@ -419,7 +450,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         out.writeOptionalInstant(createTime);
         if (transformVersion != null) {
             out.writeBoolean(true);
-            Version.writeVersion(transformVersion, out);
+            TransformConfigVersion.writeVersion(transformVersion, out);
         } else {
             out.writeBoolean(false);
         }
@@ -448,7 +479,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
                 builder.field(TransformField.VERSION.getPreferredName(), transformVersion);
             }
             if (createTime != null) {
-                builder.timeField(
+                builder.timestampFieldsFromUnixEpochMillis(
                     TransformField.CREATE_TIME.getPreferredName(),
                     TransformField.CREATE_TIME.getPreferredName() + "_string",
                     createTime.toEpochMilli()
@@ -543,8 +574,14 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         return Strings.toString(this, true, true);
     }
 
-    public static TransformConfig fromXContent(final XContentParser parser, @Nullable final String optionalTransformId, boolean lenient) {
-        return lenient ? LENIENT_PARSER.apply(parser, optionalTransformId) : STRICT_PARSER.apply(parser, optionalTransformId);
+    public static TransformConfig fromXContent(
+        final XContentParser parser,
+        @Nullable final String optionalTransformId,
+        boolean lenient,
+        TransformParsingContext transformParsingContext
+    ) {
+        var context = new ParserContext(optionalTransformId, transformParsingContext);
+        return lenient ? LENIENT_PARSER.apply(parser, context) : STRICT_PARSER.apply(parser, context);
     }
 
     /**
@@ -576,6 +613,48 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
 
     private static TransformConfig applyRewriteForUpdate(Builder builder) {
         // 1. Move pivot.max_page_size_search to settings.max_page_size_search
+        migrateMaxPageSearchSize(builder);
+
+        // 2. set dates_as_epoch_millis to true for transforms < 7.11 to keep BWC
+        if (builder.getVersion() != null && builder.getVersion().before(TransformConfigVersion.V_7_11_0)) {
+            builder.setSettings(
+                new SettingsConfig(
+                    builder.getSettings().getMaxPageSearchSize(),
+                    builder.getSettings().getDocsPerSecond(),
+                    true,
+                    builder.getSettings().getAlignCheckpoints(),
+                    builder.getSettings().getUsePit(),
+                    builder.getSettings().getDeduceMappings(),
+                    builder.getSettings().getNumFailureRetries(),
+                    builder.getSettings().getUnattended()
+                )
+            );
+        }
+
+        // 3. set align_checkpoints to false for transforms < 7.15 to keep BWC
+        if (builder.getVersion() != null && builder.getVersion().before(TransformConfigVersion.V_7_15_0)) {
+            builder.setSettings(
+                new SettingsConfig(
+                    builder.getSettings().getMaxPageSearchSize(),
+                    builder.getSettings().getDocsPerSecond(),
+                    builder.getSettings().getDatesAsEpochMillis(),
+                    false,
+                    builder.getSettings().getUsePit(),
+                    builder.getSettings().getDeduceMappings(),
+                    builder.getSettings().getNumFailureRetries(),
+                    builder.getSettings().getUnattended()
+                )
+            );
+        }
+
+        return builder.setVersion(TransformConfigVersion.CURRENT).build();
+    }
+
+    public boolean shouldAutoMigrateMaxPageSearchSize() {
+        return getPivotConfig() != null && getPivotConfig().getMaxPageSearchSize() != null;
+    }
+
+    public static Builder migrateMaxPageSearchSize(Builder builder) {
         if (builder.getPivotConfig() != null && builder.getPivotConfig().getMaxPageSearchSize() != null) {
 
             // find maxPageSearchSize value
@@ -602,40 +681,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
                 )
             );
         }
-
-        // 2. set dates_as_epoch_millis to true for transforms < 7.11 to keep BWC
-        if (builder.getVersion() != null && builder.getVersion().before(Version.V_7_11_0)) {
-            builder.setSettings(
-                new SettingsConfig(
-                    builder.getSettings().getMaxPageSearchSize(),
-                    builder.getSettings().getDocsPerSecond(),
-                    true,
-                    builder.getSettings().getAlignCheckpoints(),
-                    builder.getSettings().getUsePit(),
-                    builder.getSettings().getDeduceMappings(),
-                    builder.getSettings().getNumFailureRetries(),
-                    builder.getSettings().getUnattended()
-                )
-            );
-        }
-
-        // 3. set align_checkpoints to false for transforms < 7.15 to keep BWC
-        if (builder.getVersion() != null && builder.getVersion().before(Version.V_7_15_0)) {
-            builder.setSettings(
-                new SettingsConfig(
-                    builder.getSettings().getMaxPageSearchSize(),
-                    builder.getSettings().getDocsPerSecond(),
-                    builder.getSettings().getDatesAsEpochMillis(),
-                    false,
-                    builder.getSettings().getUsePit(),
-                    builder.getSettings().getDeduceMappings(),
-                    builder.getSettings().getNumFailureRetries(),
-                    builder.getSettings().getUnattended()
-                )
-            );
-        }
-
-        return builder.setVersion(Version.CURRENT).build();
+        return builder;
     }
 
     public static Builder builder() {
@@ -650,7 +696,7 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
         private SyncConfig syncConfig;
         private String description;
         private Map<String, String> headers;
-        private Version transformVersion;
+        private TransformConfigVersion transformVersion;
         private Instant createTime;
         private PivotConfig pivotConfig;
         private LatestConfig latestConfig;
@@ -775,12 +821,12 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
             return latestConfig;
         }
 
-        Builder setVersion(Version version) {
+        Builder setVersion(TransformConfigVersion version) {
             this.transformVersion = version;
             return this;
         }
 
-        Version getVersion() {
+        TransformConfigVersion getVersion() {
             return transformVersion;
         }
 
@@ -856,4 +902,6 @@ public class TransformConfig implements SimpleDiffable<TransformConfig>, Writeab
             );
         }
     }
+
+    private record ParserContext(String optionalTransformId, TransformParsingContext transformParsingContext) {}
 }
