@@ -7,8 +7,14 @@
 
 package org.elasticsearch.xpack.ilm;
 
+import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.ProjectId;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.settings.Setting;
+import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.core.NotMultiProjectCapable;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.health.Diagnosis;
 import org.elasticsearch.health.HealthIndicatorDetails;
@@ -39,11 +45,12 @@ import org.elasticsearch.xpack.core.ilm.WaitForNoFollowersStep;
 import org.elasticsearch.xpack.core.ilm.WaitForRolloverReadyStep;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeSet;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
 import java.util.function.LongSupplier;
 import java.util.stream.Collectors;
 
@@ -79,6 +86,30 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
         null
     );
 
+    static final Setting<TimeValue> MAX_TIME_ON_ACTION_SETTING = Setting.timeSetting(
+        "health.ilm.max_time_on_action",
+        new TimeValue(1, TimeUnit.DAYS),
+        new TimeValue(1, TimeUnit.DAYS),
+        Setting.Property.NodeScope,
+        Setting.Property.Dynamic
+    );
+
+    static final Setting<TimeValue> MAX_TIME_ON_STEP_SETTING = Setting.timeSetting(
+        "health.ilm.max_time_on_step",
+        new TimeValue(1, TimeUnit.DAYS),
+        new TimeValue(1, TimeUnit.DAYS),
+        Setting.Property.NodeScope,
+        Setting.Property.Dynamic
+    );
+
+    static final Setting<Long> MAX_RETRIES_PER_STEP_SETTING = Setting.longSetting(
+        "health.ilm.max_retries_per_step",
+        100,
+        2,
+        Setting.Property.NodeScope,
+        Setting.Property.Dynamic
+    );
+
     public static final String AUTOMATION_DISABLED_IMPACT_ID = "automation_disabled";
     public static final String STAGNATING_INDEX_IMPACT_ID = "stagnating_index";
     public static final List<HealthIndicatorImpact> AUTOMATION_DISABLED_IMPACT = List.of(
@@ -103,62 +134,63 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
         )
     );
 
-    private static final TimeValue ONE_DAY = TimeValue.timeValueDays(1);
-    private static final long MAX_RETRIES = 100;
-
-    static final Map<String, RuleConfig> RULES_BY_ACTION_CONFIG = Map.of(
+    static final Map<String, RuleCreator> RULES_BY_ACTION_CONFIG = Map.of(
         RolloverAction.NAME,
-        actionRule(RolloverAction.NAME).stepRules(
-            stepRuleFullChecks(WaitForActiveShardsStep.NAME, ONE_DAY, MAX_RETRIES),
-            stepRuleOnlyCheckRetries(WaitForRolloverReadyStep.NAME, MAX_RETRIES),
-            stepRuleFullChecks(RolloverStep.NAME, ONE_DAY, MAX_RETRIES)
+        (maxTimeOnAction, maxTimeOnStep, maxRetries) -> actionRule(RolloverAction.NAME).stepRules(
+            stepRuleFullChecks(WaitForActiveShardsStep.NAME, maxTimeOnStep, maxRetries),
+            stepRuleOnlyCheckRetries(WaitForRolloverReadyStep.NAME, maxRetries),
+            stepRuleFullChecks(RolloverStep.NAME, maxTimeOnStep, maxRetries)
         ),
         //
         MigrateAction.NAME,
-        actionRule(MigrateAction.NAME).maxTimeOnAction(ONE_DAY).noStepRules(),
+        (maxTimeOnAction, maxTimeOnStep, maxRetries) -> actionRule(MigrateAction.NAME).maxTimeOnAction(maxTimeOnAction).noStepRules(),
         //
         SearchableSnapshotAction.NAME,
-        actionRule(SearchableSnapshotAction.NAME).maxTimeOnAction(ONE_DAY)
+        (maxTimeOnAction, maxTimeOnStep, maxRetries) -> actionRule(SearchableSnapshotAction.NAME).maxTimeOnAction(maxTimeOnAction)
             .stepRules(
-                stepRuleFullChecks(WaitForDataTierStep.NAME, ONE_DAY, MAX_RETRIES),
-                stepRuleFullChecks(WaitForIndexColorStep.NAME, ONE_DAY, MAX_RETRIES),
-                stepRuleOnlyCheckRetries(WaitForNoFollowersStep.NAME, MAX_RETRIES)
+                stepRuleFullChecks(WaitForDataTierStep.NAME, maxTimeOnStep, maxRetries),
+                stepRuleFullChecks(WaitForIndexColorStep.NAME, maxTimeOnStep, maxRetries),
+                stepRuleOnlyCheckRetries(WaitForNoFollowersStep.NAME, maxRetries)
             ),
         //
         DeleteAction.NAME,
-        actionRule(DeleteAction.NAME).stepRules(stepRuleFullChecks(DeleteStep.NAME, ONE_DAY, MAX_RETRIES)),
+        (maxTimeOnAction, maxTimeOnStep, maxRetries) -> actionRule(DeleteAction.NAME).stepRules(
+            stepRuleFullChecks(DeleteStep.NAME, maxTimeOnStep, maxRetries)
+        ),
         //
         ShrinkAction.NAME,
-        actionRule(ShrinkAction.NAME).maxTimeOnAction(ONE_DAY)
-            .stepRules(stepRuleOnlyCheckRetries(WaitForNoFollowersStep.NAME, MAX_RETRIES)),
+        (maxTimeOnAction, maxTimeOnStep, maxRetries) -> actionRule(ShrinkAction.NAME).maxTimeOnAction(
+            maxTimeOnAction
+
+        ).stepRules(stepRuleOnlyCheckRetries(WaitForNoFollowersStep.NAME, maxRetries)),
         //
         AllocateAction.NAME,
-        actionRule(AllocateAction.NAME).maxTimeOnAction(ONE_DAY).noStepRules(),
+        (maxTimeOnAction, maxTimeOnStep, maxRetries) -> actionRule(AllocateAction.NAME).maxTimeOnAction(maxTimeOnAction).noStepRules(),
         //
         ForceMergeAction.NAME,
-        actionRule(ForceMergeAction.NAME).maxTimeOnAction(ONE_DAY)
+        (maxTimeOnAction, maxTimeOnStep, maxRetries) -> actionRule(ForceMergeAction.NAME).maxTimeOnAction(maxTimeOnAction)
             .stepRules(
-                stepRuleFullChecks(WaitForIndexColorStep.NAME, ONE_DAY, MAX_RETRIES),
-                stepRuleFullChecks(ForceMergeStep.NAME, ONE_DAY, MAX_RETRIES),
-                stepRuleFullChecks(SegmentCountStep.NAME, ONE_DAY, MAX_RETRIES)
+                stepRuleFullChecks(WaitForIndexColorStep.NAME, maxTimeOnStep, maxRetries),
+                stepRuleFullChecks(ForceMergeStep.NAME, maxTimeOnStep, maxRetries),
+                stepRuleFullChecks(SegmentCountStep.NAME, maxTimeOnStep, maxRetries)
             )
         //
         // The next rule has to be commented because of this issue https://github.com/elastic/elasticsearch/issues/96705
         // DownsampleAction.NAME,
-        // actionRule(DownsampleAction.NAME).maxTimeOnAction(ONE_DAY).stepRules(stepRule(WaitForNoFollowersStep.NAME, ONE_DAY))
+        // (maxTimeOnAction, maxTimeOnStep, maxRetries) ->
+        // actionRule(DownsampleAction.NAME).maxTimeOnAction(maxTimeOnAction).stepRules(stepRule(WaitForNoFollowersStep.NAME,
+        // maxTimeOnAction))
     );
 
-    public static final Collection<RuleConfig> ILM_RULE_EVALUATOR = RULES_BY_ACTION_CONFIG.values();
-
-    static final Map<String, Diagnosis.Definition> STAGNATING_ACTION_DEFINITIONS = RULES_BY_ACTION_CONFIG.entrySet()
+    static final Map<String, Diagnosis.Definition> STAGNATING_ACTION_DEFINITIONS = RULES_BY_ACTION_CONFIG.keySet()
         .stream()
         .collect(
             Collectors.toUnmodifiableMap(
-                Map.Entry::getKey,
-                entry -> new Diagnosis.Definition(
+                Function.identity(),
+                action -> new Diagnosis.Definition(
                     NAME,
-                    "stagnating_action:" + entry.getKey(),
-                    "Some indices have been stagnated on the action [" + entry.getKey() + "] longer than the expected time.",
+                    "stagnating_action:" + action,
+                    "Some indices have been stagnated on the action [" + action + "] longer than the expected time.",
                     "Check the current status of the Index Lifecycle Management for every affected index using the "
                         + "[GET /<affected_index_name>/_ilm/explain] API. Please replace the <affected_index_name> in the API "
                         + "with the actual index name.",
@@ -182,16 +214,16 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
 
     @Override
     public HealthIndicatorResult calculate(boolean verbose, int maxAffectedResourcesCount, HealthInfo healthInfo) {
-        final var currentState = clusterService.state();
-        var ilmMetadata = currentState.metadata().custom(IndexLifecycleMetadata.TYPE, IndexLifecycleMetadata.EMPTY);
-        final var currentMode = currentILMMode(currentState);
+        final var projectMetadata = getDefaultILMProject(clusterService.state());
+        var ilmMetadata = projectMetadata.custom(IndexLifecycleMetadata.TYPE, IndexLifecycleMetadata.EMPTY);
+        final var currentMode = currentILMMode(projectMetadata);
         if (ilmMetadata.getPolicyMetadatas().isEmpty()) {
             return createIndicator(
                 GREEN,
                 "No Index Lifecycle Management policies configured",
                 createDetails(verbose, ilmMetadata, currentMode),
-                Collections.emptyList(),
-                Collections.emptyList()
+                List.of(),
+                List.of()
             );
         } else if (currentMode != OperationMode.RUNNING) {
             return createIndicator(
@@ -199,7 +231,7 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
                 "Index Lifecycle Management is not running",
                 createDetails(verbose, ilmMetadata, currentMode),
                 AUTOMATION_DISABLED_IMPACT,
-                List.of(ILM_NOT_RUNNING)
+                verbose ? List.of(ILM_NOT_RUNNING) : List.of()
             );
         } else {
             var stagnatingIndices = stagnatingIndicesFinder.find();
@@ -209,8 +241,8 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
                     GREEN,
                     "Index Lifecycle Management is running",
                     createDetails(verbose, ilmMetadata, currentMode),
-                    Collections.emptyList(),
-                    Collections.emptyList()
+                    List.of(),
+                    List.of()
                 );
             } else {
                 return createIndicator(
@@ -219,7 +251,7 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
                         + " stayed on the same action longer than expected.",
                     createDetails(verbose, ilmMetadata, currentMode, stagnatingIndices),
                     STAGNATING_INDEX_IMPACT,
-                    createDiagnoses(stagnatingIndices, maxAffectedResourcesCount)
+                    verbose ? createDiagnoses(stagnatingIndices, maxAffectedResourcesCount) : List.of()
                 );
             }
         }
@@ -290,32 +322,64 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
      */
     static class StagnatingIndicesFinder {
         private final ClusterService clusterService;
-        private final Collection<RuleConfig> rules;
         private final LongSupplier nowSupplier;
+        private final Collection<RuleCreator> rulesCreators;
+        private volatile Collection<RuleConfig> rules;
 
-        StagnatingIndicesFinder(ClusterService clusterService, Collection<RuleConfig> rules, LongSupplier nowSupplier) {
+        StagnatingIndicesFinder(ClusterService clusterService, Collection<RuleCreator> rulesCreators, LongSupplier nowSupplier) {
             this.clusterService = clusterService;
-            this.rules = rules;
+            this.rulesCreators = rulesCreators;
             this.nowSupplier = nowSupplier;
+
+            var clusterSettings = this.clusterService.getClusterSettings();
+
+            clusterSettings.addSettingsUpdateConsumer(
+                this::recreateRules,
+                List.of(MAX_TIME_ON_ACTION_SETTING, MAX_TIME_ON_STEP_SETTING, MAX_RETRIES_PER_STEP_SETTING)
+            );
+
+            recreateRules(clusterService.getSettings());
         }
 
         /**
          * @return A list containing the ILM managed indices that are stagnated in any ILM action/step.
          */
         public List<IndexMetadata> find() {
-            var metadata = clusterService.state().metadata();
+            final var project = getDefaultILMProject(clusterService.state());
             var now = nowSupplier.getAsLong();
-            return metadata.indices()
+
+            return project.indices()
                 .values()
                 .stream()
-                .filter(metadata::isIndexManagedByILM)
+                .filter(project::isIndexManagedByILM)
                 .filter(md -> isStagnated(rules, now, md))
                 .toList();
+        }
+
+        void recreateRules(Settings settings) {
+            var maxTimeOnAction = MAX_TIME_ON_ACTION_SETTING.get(settings);
+            var maxTimeOnStep = MAX_TIME_ON_STEP_SETTING.get(settings);
+            var maxRetriesPerStep = MAX_RETRIES_PER_STEP_SETTING.get(settings);
+
+            rules = rulesCreators.stream().map(rc -> rc.create(maxTimeOnAction, maxTimeOnStep, maxRetriesPerStep)).toList();
+        }
+
+        Collection<RuleConfig> rules() {
+            return rules;
+        }
+
+        ClusterService clusterService() {
+            return clusterService;
         }
     }
 
     static boolean isStagnated(Collection<RuleConfig> rules, Long now, IndexMetadata indexMetadata) {
         return rules.stream().anyMatch(r -> r.test(now, indexMetadata));
+    }
+
+    @FunctionalInterface
+    interface RuleCreator {
+        RuleConfig create(TimeValue defaultMaxTimeOnAction, TimeValue defaultMaxTimeOnStep, Long defaultMaxRetriesPerStep);
     }
 
     @FunctionalInterface
@@ -434,5 +498,14 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
                     && maxTimeOn.compareTo(RuleConfig.getElapsedTime(now, indexMetadata.getLifecycleExecutionState().stepTime())) < 0
                     || (maxRetries != null && failedStepRetryCount != null && failedStepRetryCount > maxRetries));
         }
+    }
+
+    /**
+     * This method solely exists because we are not making ILM properly project-aware and it's not worth the investment of altering this
+     * health indicator to be project-aware.
+     */
+    @NotMultiProjectCapable
+    private static ProjectMetadata getDefaultILMProject(ClusterState state) {
+        return state.metadata().getProject(ProjectId.DEFAULT);
     }
 }
