@@ -15,25 +15,21 @@ import org.elasticsearch.action.DocWriteRequest;
 import org.elasticsearch.action.DocWriteResponse;
 import org.elasticsearch.action.NoShardAvailableActionException;
 import org.elasticsearch.action.UnavailableShardsException;
-import org.elasticsearch.action.bulk.BulkAction;
 import org.elasticsearch.action.bulk.BulkItemResponse;
 import org.elasticsearch.action.bulk.BulkRequest;
 import org.elasticsearch.action.bulk.BulkRequestBuilder;
 import org.elasticsearch.action.bulk.BulkResponse;
-import org.elasticsearch.action.get.GetAction;
 import org.elasticsearch.action.get.GetRequest;
 import org.elasticsearch.action.get.GetRequestBuilder;
 import org.elasticsearch.action.get.GetResponse;
-import org.elasticsearch.action.index.IndexAction;
 import org.elasticsearch.action.index.IndexRequest;
 import org.elasticsearch.action.index.IndexRequestBuilder;
 import org.elasticsearch.action.index.IndexResponse;
-import org.elasticsearch.action.search.SearchAction;
+import org.elasticsearch.action.index.TransportIndexAction;
 import org.elasticsearch.action.search.SearchRequest;
 import org.elasticsearch.action.search.SearchRequestBuilder;
 import org.elasticsearch.action.search.SearchResponse;
 import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.action.update.UpdateAction;
 import org.elasticsearch.action.update.UpdateRequestBuilder;
 import org.elasticsearch.action.update.UpdateResponse;
 import org.elasticsearch.client.internal.Client;
@@ -46,11 +42,14 @@ import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.bytes.BytesReference;
+import org.elasticsearch.common.io.stream.MockBytesRefRecycler;
 import org.elasticsearch.common.settings.SecureString;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.Releasables;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.index.Index;
@@ -58,14 +57,18 @@ import org.elasticsearch.index.get.GetResult;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.TermQueryBuilder;
 import org.elasticsearch.index.shard.ShardId;
+import org.elasticsearch.indices.SystemIndices;
 import org.elasticsearch.license.MockLicenseState;
 import org.elasticsearch.node.Node;
+import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.search.SearchHit;
 import org.elasticsearch.search.SearchHits;
+import org.elasticsearch.telemetry.metric.MeterRegistry;
 import org.elasticsearch.test.ClusterServiceUtils;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.EqualsHashCodeTestUtils;
 import org.elasticsearch.test.XContentTestUtils;
+import org.elasticsearch.threadpool.DefaultBuiltInExecutorBuilders;
 import org.elasticsearch.threadpool.FixedExecutorBuilder;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.xcontent.ToXContent;
@@ -84,6 +87,7 @@ import org.elasticsearch.xpack.security.Security;
 import org.elasticsearch.xpack.security.authc.TokenService.RefreshTokenStatus;
 import org.elasticsearch.xpack.security.support.FeatureNotEnabledException;
 import org.elasticsearch.xpack.security.support.SecurityIndexManager;
+import org.elasticsearch.xpack.security.support.SecurityIndexManager.IndexState;
 import org.elasticsearch.xpack.security.test.SecurityMocks;
 import org.hamcrest.Matchers;
 import org.junit.After;
@@ -92,9 +96,8 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 
 import java.io.IOException;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.security.GeneralSecurityException;
+import java.security.MessageDigest;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
@@ -103,15 +106,22 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
 
 import javax.crypto.SecretKey;
 
 import static java.time.Clock.systemUTC;
+import static org.elasticsearch.common.hash.MessageDigests.sha256;
 import static org.elasticsearch.repositories.blobstore.ESBlobStoreRepositoryIntegTestCase.randomBytes;
 import static org.elasticsearch.test.ActionListenerUtils.anyActionListener;
 import static org.elasticsearch.test.ClusterServiceUtils.setState;
 import static org.elasticsearch.test.TestMatchers.throwableWithMessage;
+import static org.elasticsearch.xpack.security.authc.TokenService.RAW_TOKEN_BYTES_LENGTH;
+import static org.elasticsearch.xpack.security.authc.TokenService.RAW_TOKEN_BYTES_TOTAL_LENGTH;
+import static org.elasticsearch.xpack.security.authc.TokenService.RAW_TOKEN_DOC_ID_BYTES_LENGTH;
 import static org.elasticsearch.xpack.security.authc.TokenService.VERSION_CLIENT_AUTH_FOR_REFRESH;
+import static org.elasticsearch.xpack.security.authc.TokenService.VERSION_GET_TOKEN_DOC_FOR_REFRESH;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsString;
@@ -131,6 +141,7 @@ import static org.mockito.Mockito.when;
 public class TokenServiceTests extends ESTestCase {
 
     private static ThreadPool threadPool;
+    private static ThreadContext.StoredContext defaultContext;
     private static final Settings settings = Settings.builder()
         .put(Node.NODE_NAME_SETTING.getKey(), "TokenServiceTests")
         .put(XPackSettings.TOKEN_SERVICE_ENABLED_SETTING.getKey(), true)
@@ -140,12 +151,14 @@ public class TokenServiceTests extends ESTestCase {
     private SecurityIndexManager securityMainIndex;
     private SecurityIndexManager securityTokensIndex;
     private ClusterService clusterService;
-    private DiscoveryNode oldNode;
+    private DiscoveryNode pre72OldNode;
+    private DiscoveryNode pre8500040OldNode;
     private Settings tokenServiceEnabledSettings = Settings.builder()
         .put(XPackSettings.TOKEN_SERVICE_ENABLED_SETTING.getKey(), true)
         .build();
     private MockLicenseState licenseState;
     private SecurityContext securityContext;
+    private MockBytesRefRecycler bytesRefRecycler;
 
     @Before
     public void setupClient() {
@@ -153,18 +166,18 @@ public class TokenServiceTests extends ESTestCase {
         when(client.threadPool()).thenReturn(threadPool);
         when(client.settings()).thenReturn(settings);
         doAnswer(invocationOnMock -> {
-            GetRequestBuilder builder = new GetRequestBuilder(client, GetAction.INSTANCE);
+            GetRequestBuilder builder = new GetRequestBuilder(client);
             builder.setIndex((String) invocationOnMock.getArguments()[0]).setId((String) invocationOnMock.getArguments()[1]);
             return builder;
         }).when(client).prepareGet(anyString(), anyString());
-        when(client.prepareIndex(any(String.class))).thenReturn(new IndexRequestBuilder(client, IndexAction.INSTANCE));
-        when(client.prepareBulk()).thenReturn(new BulkRequestBuilder(client, BulkAction.INSTANCE));
+        when(client.prepareIndex(any(String.class))).thenReturn(new IndexRequestBuilder(client));
+        when(client.prepareBulk()).thenReturn(new BulkRequestBuilder(client));
         when(client.prepareUpdate(any(String.class), any(String.class))).thenAnswer(inv -> {
             final String index = (String) inv.getArguments()[0];
             final String id = (String) inv.getArguments()[1];
-            return new UpdateRequestBuilder(client, UpdateAction.INSTANCE).setIndex(index).setId(id);
+            return new UpdateRequestBuilder(client).setIndex(index).setId(id);
         });
-        when(client.prepareSearch(any(String.class))).thenReturn(new SearchRequestBuilder(client, SearchAction.INSTANCE));
+        when(client.prepareSearch(any(String.class))).thenReturn(new SearchRequestBuilder(client));
         doAnswer(invocationOnMock -> {
             @SuppressWarnings("unchecked")
             ActionListener<IndexResponse> responseActionListener = (ActionListener<IndexResponse>) invocationOnMock.getArguments()[2];
@@ -179,7 +192,7 @@ public class TokenServiceTests extends ESTestCase {
                 )
             );
             return null;
-        }).when(client).execute(eq(IndexAction.INSTANCE), any(IndexRequest.class), anyActionListener());
+        }).when(client).execute(eq(TransportIndexAction.TYPE), any(IndexRequest.class), anyActionListener());
         doAnswer(invocationOnMock -> {
             BulkRequest request = (BulkRequest) invocationOnMock.getArguments()[0];
             @SuppressWarnings("unchecked")
@@ -209,18 +222,24 @@ public class TokenServiceTests extends ESTestCase {
         // setup lifecycle service
         this.securityMainIndex = SecurityMocks.mockSecurityIndexManager();
         this.securityTokensIndex = SecurityMocks.mockSecurityIndexManager();
-        this.clusterService = ClusterServiceUtils.createClusterService(threadPool);
+
+        try (var ignored = threadPool.getThreadContext().newStoredContext()) {
+            defaultContext.restore();
+            this.clusterService = ClusterServiceUtils.createClusterService(threadPool);
+        }
 
         // License state (enabled by default)
         licenseState = mock(MockLicenseState.class);
         when(licenseState.isAllowed(Security.TOKEN_SERVICE_FEATURE)).thenReturn(true);
 
-        // version 7.2 was an "inflection" point in the Token Service development (access_tokens as UUIDS, multiple concurrent refreshes,
-        // tokens docs on a separate index), let's test the TokenService works in a mixed cluster with nodes with versions prior to these
-        // developments
         if (randomBoolean()) {
-            oldNode = addAnother7071DataNode(this.clusterService);
+            // version 7.2 was an "inflection" point in the Token Service development (access_tokens as UUIDS, multiple concurrent
+            // refreshes,
+            // tokens docs on a separate index)
+            pre72OldNode = addAnother7071DataNode(this.clusterService);
         }
+
+        bytesRefRecycler = new MockBytesRefRecycler();
     }
 
     private static DiscoveryNode addAnother7071DataNode(ClusterService clusterService) {
@@ -228,12 +247,11 @@ public class TokenServiceTests extends ESTestCase {
         TransportVersion transportVersion;
         if (randomBoolean()) {
             version = Version.V_7_0_0;
-            transportVersion = TransportVersion.V_7_0_0;
+            transportVersion = TransportVersion.fromId(7_00_00_99);
         } else {
             version = Version.V_7_1_0;
-            transportVersion = TransportVersion.V_7_1_0;
+            transportVersion = TransportVersion.fromId(7_01_00_99);
         }
-
         return addAnotherDataNodeWithVersion(clusterService, version, transportVersion);
     }
 
@@ -241,14 +259,27 @@ public class TokenServiceTests extends ESTestCase {
     public void tearDown() throws Exception {
         super.tearDown();
         clusterService.close();
+        // wait for any async threads to release their recycler pages
+        assertBusy(() -> assertEquals(0, bytesRefRecycler.activePageCount()));
+        Releasables.closeExpectNoException(bytesRefRecycler);
     }
 
     @BeforeClass
     public static void startThreadPool() throws IOException {
         threadPool = new ThreadPool(
             settings,
-            new FixedExecutorBuilder(settings, TokenService.THREAD_POOL_NAME, 1, 1000, "xpack.security.authc.token.thread_pool", false)
+            MeterRegistry.NOOP,
+            new DefaultBuiltInExecutorBuilders(),
+            new FixedExecutorBuilder(
+                settings,
+                TokenService.THREAD_POOL_NAME,
+                1,
+                1000,
+                "xpack.security.authc.token.thread_pool",
+                EsExecutors.TaskTrackingConfig.DO_NOT_TRACK
+            )
         );
+        defaultContext = threadPool.getThreadContext().newStoredContext();
         AuthenticationTestHelper.builder()
             .user(new User("foo"))
             .realmRef(new RealmRef("realm", "type", "node"))
@@ -264,17 +295,27 @@ public class TokenServiceTests extends ESTestCase {
 
     public void testAttachAndGetToken() throws Exception {
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
+        // This test only makes sense in mixed clusters with pre v7.2.0 nodes where the Token Service Key is used (to encrypt tokens)
+        if (null == pre72OldNode) {
+            pre72OldNode = addAnother7071DataNode(this.clusterService);
+        }
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String userTokenId = UUIDs.randomBase64UUID();
-        final String refreshToken = UUIDs.randomBase64UUID();
-        tokenService.createOAuth2Tokens(userTokenId, refreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        tokenService.createOAuth2Tokens(
+            newTokenBytes.v1(),
+            newTokenBytes.v2(),
+            authentication,
+            authentication,
+            Collections.emptyMap(),
+            tokenFuture
+        );
         final String accessToken = tokenFuture.get().getAccessToken();
         assertNotNull(accessToken);
-        mockGetTokenFromId(tokenService, userTokenId, authentication, false);
+        mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, false, null);
 
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
         requestContext.putHeader("Authorization", randomFrom("Bearer ", "BEARER ", "bearer ") + accessToken);
@@ -318,20 +359,26 @@ public class TokenServiceTests extends ESTestCase {
     public void testPassphraseWorks() throws Exception {
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         // This test only makes sense in mixed clusters with pre v7.1.0 nodes where the Key is actually used
-        if (null == oldNode) {
-            oldNode = addAnother7071DataNode(this.clusterService);
+        if (null == pre72OldNode) {
+            pre72OldNode = addAnother7071DataNode(this.clusterService);
         }
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String userTokenId = UUIDs.randomBase64UUID();
-        final String refreshToken = UUIDs.randomBase64UUID();
-        tokenService.createOAuth2Tokens(userTokenId, refreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        tokenService.createOAuth2Tokens(
+            newTokenBytes.v1(),
+            newTokenBytes.v2(),
+            authentication,
+            authentication,
+            Collections.emptyMap(),
+            tokenFuture
+        );
         final String accessToken = tokenFuture.get().getAccessToken();
         assertNotNull(accessToken);
-        mockGetTokenFromId(tokenService, userTokenId, authentication, false);
+        mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, false, null);
 
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
         storeTokenHeader(requestContext, accessToken);
@@ -357,8 +404,8 @@ public class TokenServiceTests extends ESTestCase {
     public void testGetTokenWhenKeyCacheHasExpired() throws Exception {
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         // This test only makes sense in mixed clusters with pre v7.1.0 nodes where the Key is actually used
-        if (null == oldNode) {
-            oldNode = addAnother7071DataNode(this.clusterService);
+        if (null == pre72OldNode) {
+            pre72OldNode = addAnother7071DataNode(this.clusterService);
         }
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
@@ -366,33 +413,47 @@ public class TokenServiceTests extends ESTestCase {
             .build(false);
 
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String userTokenId = UUIDs.randomBase64UUID();
-        final String refreshToken = UUIDs.randomBase64UUID();
-        tokenService.createOAuth2Tokens(userTokenId, refreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        tokenService.createOAuth2Tokens(
+            newTokenBytes.v1(),
+            newTokenBytes.v2(),
+            authentication,
+            authentication,
+            Collections.emptyMap(),
+            tokenFuture
+        );
         String accessToken = tokenFuture.get().getAccessToken();
         assertThat(accessToken, notNullValue());
 
         tokenService.clearActiveKeyCache();
 
-        tokenService.createOAuth2Tokens(userTokenId, refreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
+        tokenService.createOAuth2Tokens(
+            newTokenBytes.v1(),
+            newTokenBytes.v2(),
+            authentication,
+            authentication,
+            Collections.emptyMap(),
+            tokenFuture
+        );
         accessToken = tokenFuture.get().getAccessToken();
         assertThat(accessToken, notNullValue());
     }
 
-    public void testInvalidatedToken() throws Exception {
-        when(securityMainIndex.indexExists()).thenReturn(true);
+    public void testAuthnWithInvalidatedToken() throws Exception {
+        IndexState projectIndex = securityMainIndex.forCurrentProject();
+        when(projectIndex.indexExists()).thenReturn(true);
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String userTokenId = UUIDs.randomBase64UUID();
-        final String refreshToken = UUIDs.randomBase64UUID();
-        tokenService.createOAuth2Tokens(userTokenId, refreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        tokenService.createOAuth2Tokens(newTokenBytes.v1(), newTokenBytes.v2(), authentication, authentication, Map.of(), tokenFuture);
         final String accessToken = tokenFuture.get().getAccessToken();
         assertNotNull(accessToken);
-        mockGetTokenFromId(tokenService, userTokenId, authentication, true);
+        // mock token as invalidated
+        mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, true, null);
 
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
         storeTokenHeader(requestContext, accessToken);
@@ -402,27 +463,29 @@ public class TokenServiceTests extends ESTestCase {
             final SecureString bearerToken = Authenticator.extractBearerTokenFromHeader(requestContext);
             tokenService.tryAuthenticateToken(bearerToken, future);
             ElasticsearchSecurityException e = expectThrows(ElasticsearchSecurityException.class, future::actionGet);
-            final String headerValue = e.getHeader("WWW-Authenticate").get(0);
+            final String headerValue = e.getBodyHeader("WWW-Authenticate").get(0);
             assertThat(headerValue, containsString("Bearer realm="));
             assertThat(headerValue, containsString("expired"));
         }
     }
 
     public void testInvalidateRefreshToken() throws Exception {
-        when(securityMainIndex.indexExists()).thenReturn(true);
+        IndexState projectIndex = securityMainIndex.forCurrentProject();
+        when(projectIndex.indexExists()).thenReturn(true);
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String userTokenId = UUIDs.randomBase64UUID();
-        final String rawRefreshToken = UUIDs.randomBase64UUID();
-        tokenService.createOAuth2Tokens(userTokenId, rawRefreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
-        final String accessToken = tokenFuture.get().getAccessToken();
-        final String clientRefreshToken = tokenFuture.get().getRefreshToken();
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(true);
+        tokenService.createOAuth2Tokens(newTokenBytes.v1(), newTokenBytes.v2(), authentication, authentication, Map.of(), tokenFuture);
+        final TokenService.CreateTokenResult tokenResult = tokenFuture.get(180, TimeUnit.SECONDS);
+        final String accessToken = tokenResult.getAccessToken();
+        final String clientRefreshToken = tokenResult.getRefreshToken();
         assertNotNull(accessToken);
-        mockFindTokenFromRefreshToken(rawRefreshToken, buildUserToken(tokenService, userTokenId, authentication, Map.of()), null);
+        assertNotNull(clientRefreshToken);
+        mockTokenForRefreshToken(newTokenBytes.v1(), newTokenBytes.v2(), tokenService, authentication, null);
 
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
         storeTokenHeader(requestContext, accessToken);
@@ -434,23 +497,31 @@ public class TokenServiceTests extends ESTestCase {
             assertThat(result.getInvalidatedTokens(), hasSize(1));
             assertThat(result.getPreviouslyInvalidatedTokens(), empty());
             assertThat(result.getErrors(), empty());
+            PlainActionFuture<TokenService.CreateTokenResult> refreshTokenFuture = new PlainActionFuture<>();
+            tokenService.refreshToken(clientRefreshToken, refreshTokenFuture);
+            ExecutionException e = expectThrows(ExecutionException.class, refreshTokenFuture::get);
+            assertThat(e.getCause(), instanceOf(ElasticsearchSecurityException.class));
+            assertThat(e.getCause().toString(), containsString("invalid_grant"));
         }
     }
 
     public void testInvalidateRefreshTokenThatIsAlreadyInvalidated() throws Exception {
-        when(securityMainIndex.indexExists()).thenReturn(true);
+        IndexState projectIndex = securityMainIndex.forCurrentProject();
+        when(projectIndex.indexExists()).thenReturn(true);
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         Authentication authentication = AuthenticationTests.randomAuthentication(null, null);
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String userTokenId = UUIDs.randomBase64UUID();
-        final String rawRefreshToken = UUIDs.randomBase64UUID();
-        tokenService.createOAuth2Tokens(userTokenId, rawRefreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(true);
+        tokenService.createOAuth2Tokens(newTokenBytes.v1(), newTokenBytes.v2(), authentication, authentication, Map.of(), tokenFuture);
         final String accessToken = tokenFuture.get().getAccessToken();
         final String clientRefreshToken = tokenFuture.get().getRefreshToken();
         assertNotNull(accessToken);
-        mockFindTokenFromRefreshToken(
-            rawRefreshToken,
-            buildUserToken(tokenService, userTokenId, authentication, Map.of()),
+        assertNotNull(clientRefreshToken);
+        mockTokenForRefreshToken(
+            newTokenBytes.v1(),
+            newTokenBytes.v2(),
+            tokenService,
+            authentication,
             newRefreshTokenStatus(true, authentication, false, null, null, null, null)
         );
 
@@ -476,7 +547,7 @@ public class TokenServiceTests extends ESTestCase {
         String iv,
         String salt
     ) {
-        if (authentication.getEffectiveSubject().getTransportVersion().onOrAfter(VERSION_CLIENT_AUTH_FOR_REFRESH)) {
+        if (authentication.getEffectiveSubject().getTransportVersion().supports(VERSION_CLIENT_AUTH_FOR_REFRESH)) {
             return new RefreshTokenStatus(invalidated, authentication, refreshed, refreshInstant, supersedingTokens, iv, salt);
         } else {
             return new RefreshTokenStatus(
@@ -548,18 +619,11 @@ public class TokenServiceTests extends ESTestCase {
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
-        final String userTokenId = UUIDs.randomBase64UUID();
-        UserToken userToken = new UserToken(
-            userTokenId,
-            tokenService.getTokenVersionCompatibility(),
-            authentication,
-            tokenService.getExpirationTime(),
-            Collections.emptyMap()
-        );
-        mockGetTokenFromId(userToken, false);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        UserToken userToken = mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, false, null);
         final String accessToken = tokenService.prependVersionAndEncodeAccessToken(
             tokenService.getTokenVersionCompatibility(),
-            userTokenId
+            newTokenBytes.v1()
         );
 
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
@@ -600,7 +664,7 @@ public class TokenServiceTests extends ESTestCase {
             final SecureString bearerToken = Authenticator.extractBearerTokenFromHeader(requestContext);
             tokenService.tryAuthenticateToken(bearerToken, future);
             ElasticsearchSecurityException e = expectThrows(ElasticsearchSecurityException.class, future::actionGet);
-            final String headerValue = e.getHeader("WWW-Authenticate").get(0);
+            final String headerValue = e.getBodyHeader("WWW-Authenticate").get(0);
             assertThat(headerValue, containsString("Bearer realm="));
             assertThat(headerValue, containsString("expired"));
         }
@@ -615,7 +679,8 @@ public class TokenServiceTests extends ESTestCase {
             securityContext,
             securityMainIndex,
             securityTokensIndex,
-            clusterService
+            clusterService,
+            bytesRefRecycler
         );
         ElasticsearchException e = expectThrows(
             ElasticsearchException.class,
@@ -660,19 +725,115 @@ public class TokenServiceTests extends ESTestCase {
         });
     }
 
-    public void testMalformedToken() throws Exception {
-        final int numBytes = randomIntBetween(1, TokenService.MINIMUM_BYTES + 32);
-        final byte[] randomBytes = new byte[numBytes];
-        random().nextBytes(randomBytes);
+    public void testMalformedAccessTokens() throws Exception {
+        TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
+        Authentication authentication = AuthenticationTestHelper.builder()
+            .user(new User("joe", "admin"))
+            .realmRef(new RealmRef("native_realm", "native", "node1"))
+            .build(false);
+        byte[] accessTokenBytes = tokenService.getRandomTokenBytes(randomBoolean()).v1();
+        mockGetTokenFromAccessTokenBytes(tokenService, accessTokenBytes, authentication, false, null);
+        String mockedAccessToken = tokenService.prependVersionAndEncodeAccessToken(
+            tokenService.getTokenVersionCompatibility(),
+            accessTokenBytes
+        );
+        ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
+        // test some random access tokens
+        for (int numBytes = 1; numBytes < TokenService.MINIMUM_BYTES + 32; numBytes++) {
+            final byte[] randomBytes = new byte[numBytes];
+            random().nextBytes(randomBytes);
+            String testAccessToken = Base64.getEncoder().encodeToString(randomBytes);
+            assumeFalse("Test token must be different from mock", mockedAccessToken.equals(testAccessToken));
+            try (ThreadContext.StoredContext ignore = requestContext.newStoredContextPreservingResponseHeaders()) {
+                storeTokenHeader(requestContext, testAccessToken);
+                PlainActionFuture<UserToken> future = new PlainActionFuture<>();
+                final SecureString bearerToken = Authenticator.extractBearerTokenFromHeader(requestContext);
+                tokenService.tryAuthenticateToken(bearerToken, future);
+                assertNull(future.get());
+            }
+        }
+        // test garbled mocked access tokens
+        for (int garbledByteIdx = 0; garbledByteIdx < accessTokenBytes.length; garbledByteIdx++) {
+            final byte[] garbledAccessToken = new byte[accessTokenBytes.length];
+            System.arraycopy(accessTokenBytes, 0, garbledAccessToken, 0, accessTokenBytes.length);
+            garbledAccessToken[garbledByteIdx] = (byte) (garbledAccessToken[garbledByteIdx] ^ (byte) (random().nextInt(255) + 1));
+            String testAccessToken = tokenService.prependVersionAndEncodeAccessToken(
+                tokenService.getTokenVersionCompatibility(),
+                garbledAccessToken
+            );
+            try (ThreadContext.StoredContext ignore = requestContext.newStoredContextPreservingResponseHeaders()) {
+                storeTokenHeader(requestContext, testAccessToken);
+                PlainActionFuture<UserToken> future = new PlainActionFuture<>();
+                final SecureString bearerToken = Authenticator.extractBearerTokenFromHeader(requestContext);
+                tokenService.tryAuthenticateToken(bearerToken, future);
+                assertNull(future.get());
+            }
+        }
+    }
+
+    public void testMalformedRefreshTokens() throws Exception {
+        TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
+        Authentication authentication = AuthenticationTestHelper.builder()
+            .user(new User("joe", "admin"))
+            .realmRef(new RealmRef("native_realm", "native", "node1"))
+            .build(false);
+        PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(true);
+        tokenService.createOAuth2Tokens(newTokenBytes.v1(), newTokenBytes.v2(), authentication, authentication, Map.of(), tokenFuture);
+        byte[] mockedRawRefreshToken = newTokenBytes.v2();
+        String mockedClientRefreshToken = tokenFuture.get().getRefreshToken();
+        assertNotNull(mockedClientRefreshToken);
+        mockTokenForRefreshToken(newTokenBytes.v1(), newTokenBytes.v2(), tokenService, authentication, null);
+        // test some random access tokens
+        for (int numBytes = 1; numBytes < RAW_TOKEN_BYTES_TOTAL_LENGTH + 8; numBytes++) {
+            final byte[] randomBytes = new byte[numBytes];
+            random().nextBytes(randomBytes);
+            String testRefreshToken = Base64.getEncoder().encodeToString(randomBytes);
+            assumeFalse("Test token must be different from mock", mockedClientRefreshToken.equals(testRefreshToken));
+            PlainActionFuture<TokensInvalidationResult> future = new PlainActionFuture<>();
+            tokenService.invalidateRefreshToken(testRefreshToken, future);
+            final TokensInvalidationResult result = future.get();
+            assertThat(result.getInvalidatedTokens(), hasSize(0));
+            assertThat(result.getPreviouslyInvalidatedTokens(), empty());
+            assertThat(result.getErrors(), empty());
+            assertThat(result.getRestStatus(), is(RestStatus.NOT_FOUND));
+        }
+        // test garbled mocked refresh tokens
+        for (int garbledByteIdx = 0; garbledByteIdx < mockedRawRefreshToken.length; garbledByteIdx++) {
+            final byte[] garbledRefreshToken = new byte[mockedRawRefreshToken.length];
+            System.arraycopy(mockedRawRefreshToken, 0, garbledRefreshToken, 0, mockedRawRefreshToken.length);
+            garbledRefreshToken[garbledByteIdx] = (byte) (garbledRefreshToken[garbledByteIdx] ^ (byte) (random().nextInt(255) + 1));
+            String testRefreshToken = TokenService.prependVersionAndEncodeRefreshToken(
+                tokenService.getTokenVersionCompatibility(),
+                garbledRefreshToken,
+                bytesRefRecycler
+            );
+            PlainActionFuture<TokensInvalidationResult> future = new PlainActionFuture<>();
+            tokenService.invalidateRefreshToken(testRefreshToken, future);
+            final TokensInvalidationResult result = future.get();
+            assertThat(result.getInvalidatedTokens(), hasSize(0));
+            assertThat(result.getPreviouslyInvalidatedTokens(), empty());
+            assertThat(result.getErrors(), empty());
+            assertThat(result.getRestStatus(), is(RestStatus.NOT_FOUND));
+        }
+    }
+
+    public void testNonExistingPre72Token() throws Exception {
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         // mock another random token so that we don't find a token in TokenService#getUserTokenFromId
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
-        mockGetTokenFromId(tokenService, UUIDs.randomBase64UUID(), authentication, false);
+        mockGetTokenFromAccessTokenBytes(tokenService, tokenService.getRandomTokenBytes(randomBoolean()).v1(), authentication, false, null);
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
-        storeTokenHeader(requestContext, Base64.getEncoder().encodeToString(randomBytes));
+        storeTokenHeader(
+            requestContext,
+            tokenService.prependVersionAndEncodeAccessToken(
+                TransportVersion.fromId(7_01_00_99),
+                tokenService.getRandomTokenBytes(TransportVersion.fromId(7_01_00_99), randomBoolean()).v1()
+            )
+        );
 
         try (ThreadContext.StoredContext ignore = requestContext.newStoredContextPreservingResponseHeaders()) {
             PlainActionFuture<UserToken> future = new PlainActionFuture<>();
@@ -682,16 +843,23 @@ public class TokenServiceTests extends ESTestCase {
         }
     }
 
-    public void testNotValidPre72Tokens() throws Exception {
+    public void testNonExistingUUIDToken() throws Exception {
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         // mock another random token so that we don't find a token in TokenService#getUserTokenFromId
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
-        mockGetTokenFromId(tokenService, UUIDs.randomBase64UUID(), authentication, false);
+        mockGetTokenFromAccessTokenBytes(tokenService, tokenService.getRandomTokenBytes(randomBoolean()).v1(), authentication, false, null);
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
-        storeTokenHeader(requestContext, generateAccessToken(tokenService, TransportVersion.V_7_1_0));
+        TransportVersion uuidTokenVersion = randomFrom(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS, TransportVersion.fromId(7_03_02_99));
+        storeTokenHeader(
+            requestContext,
+            tokenService.prependVersionAndEncodeAccessToken(
+                uuidTokenVersion,
+                tokenService.getRandomTokenBytes(uuidTokenVersion, randomBoolean()).v1()
+            )
+        );
 
         try (ThreadContext.StoredContext ignore = requestContext.newStoredContextPreservingResponseHeaders()) {
             PlainActionFuture<UserToken> future = new PlainActionFuture<>();
@@ -701,16 +869,22 @@ public class TokenServiceTests extends ESTestCase {
         }
     }
 
-    public void testNotValidAfter72Tokens() throws Exception {
+    public void testNonExistingLatestTokenVersion() throws Exception {
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, systemUTC());
         // mock another random token so that we don't find a token in TokenService#getUserTokenFromId
         Authentication authentication = AuthenticationTestHelper.builder()
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
-        mockGetTokenFromId(tokenService, UUIDs.randomBase64UUID(), authentication, false);
+        mockGetTokenFromAccessTokenBytes(tokenService, tokenService.getRandomTokenBytes(randomBoolean()).v1(), authentication, false, null);
         ThreadContext requestContext = new ThreadContext(Settings.EMPTY);
-        storeTokenHeader(requestContext, generateAccessToken(tokenService, randomFrom(TransportVersion.V_7_2_0, TransportVersion.V_7_3_2)));
+        storeTokenHeader(
+            requestContext,
+            tokenService.prependVersionAndEncodeAccessToken(
+                TransportVersion.current(),
+                tokenService.getRandomTokenBytes(TransportVersion.current(), randomBoolean()).v1()
+            )
+        );
 
         try (ThreadContext.StoredContext ignore = requestContext.newStoredContextPreservingResponseHeaders()) {
             PlainActionFuture<UserToken> future = new PlainActionFuture<>();
@@ -727,9 +901,15 @@ public class TokenServiceTests extends ESTestCase {
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String userTokenId = UUIDs.randomBase64UUID();
-        final String refreshToken = UUIDs.randomBase64UUID();
-        tokenService.createOAuth2Tokens(userTokenId, refreshToken, authentication, authentication, Collections.emptyMap(), tokenFuture);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        tokenService.createOAuth2Tokens(
+            newTokenBytes.v1(),
+            newTokenBytes.v2(),
+            authentication,
+            authentication,
+            Collections.emptyMap(),
+            tokenFuture
+        );
         final String accessToken = tokenFuture.get().getAccessToken();
         assertNotNull(accessToken);
 
@@ -744,40 +924,44 @@ public class TokenServiceTests extends ESTestCase {
         }).when(client).get(any(GetRequest.class), anyActionListener());
 
         final SecurityIndexManager tokensIndex;
-        if (oldNode != null) {
+        if (pre72OldNode != null) {
             tokensIndex = securityMainIndex;
-            when(securityTokensIndex.isAvailable()).thenReturn(false);
-            when(securityTokensIndex.indexExists()).thenReturn(false);
-            when(securityTokensIndex.freeze()).thenReturn(securityTokensIndex);
+            final IndexState projectTokenIndex = securityTokensIndex.forCurrentProject();
+            when(projectTokenIndex.isAvailable(SecurityIndexManager.Availability.PRIMARY_SHARDS)).thenReturn(false);
+            when(projectTokenIndex.indexExists()).thenReturn(false);
         } else {
             tokensIndex = securityTokensIndex;
-            when(securityMainIndex.isAvailable()).thenReturn(false);
-            when(securityMainIndex.indexExists()).thenReturn(false);
-            when(securityMainIndex.freeze()).thenReturn(securityMainIndex);
+            final IndexState projectMainIndex = securityMainIndex.forCurrentProject();
+            when(projectMainIndex.isAvailable(SecurityIndexManager.Availability.PRIMARY_SHARDS)).thenReturn(false);
+            when(projectMainIndex.indexExists()).thenReturn(false);
         }
+
+        IndexState projectIndex = tokensIndex.forCurrentProject();
         try (ThreadContext.StoredContext ignore = requestContext.newStoredContextPreservingResponseHeaders()) {
             PlainActionFuture<UserToken> future = new PlainActionFuture<>();
             final SecureString bearerToken3 = Authenticator.extractBearerTokenFromHeader(requestContext);
             tokenService.tryAuthenticateToken(bearerToken3, future);
             assertNull(future.get());
 
-            when(tokensIndex.isAvailable()).thenReturn(false);
-            when(tokensIndex.getUnavailableReason()).thenReturn(new UnavailableShardsException(null, "unavailable"));
-            when(tokensIndex.indexExists()).thenReturn(true);
+            when(projectIndex.isAvailable(SecurityIndexManager.Availability.PRIMARY_SHARDS)).thenReturn(false);
+            when(projectIndex.getUnavailableReason(SecurityIndexManager.Availability.PRIMARY_SHARDS)).thenReturn(
+                new UnavailableShardsException(null, "unavailable")
+            );
+            when(projectIndex.indexExists()).thenReturn(true);
             future = new PlainActionFuture<>();
             final SecureString bearerToken2 = Authenticator.extractBearerTokenFromHeader(requestContext);
             tokenService.tryAuthenticateToken(bearerToken2, future);
             assertNull(future.get());
 
-            when(tokensIndex.indexExists()).thenReturn(false);
+            when(projectIndex.indexExists()).thenReturn(false);
             future = new PlainActionFuture<>();
             final SecureString bearerToken1 = Authenticator.extractBearerTokenFromHeader(requestContext);
             tokenService.tryAuthenticateToken(bearerToken1, future);
             assertNull(future.get());
 
-            when(tokensIndex.isAvailable()).thenReturn(true);
-            when(tokensIndex.indexExists()).thenReturn(true);
-            mockGetTokenFromId(tokenService, userTokenId, authentication, false);
+            when(projectIndex.isAvailable(SecurityIndexManager.Availability.PRIMARY_SHARDS)).thenReturn(true);
+            when(projectIndex.indexExists()).thenReturn(true);
+            mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, false, null);
             future = new PlainActionFuture<>();
             final SecureString bearerToken = Authenticator.extractBearerTokenFromHeader(requestContext);
             tokenService.tryAuthenticateToken(bearerToken, future);
@@ -791,18 +975,11 @@ public class TokenServiceTests extends ESTestCase {
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
-        final String userTokenId = UUIDs.randomBase64UUID();
-        UserToken expired = new UserToken(
-            userTokenId,
-            tokenService.getTokenVersionCompatibility(),
-            authentication,
-            Instant.now().minus(3L, ChronoUnit.DAYS),
-            Collections.emptyMap()
-        );
-        mockGetTokenFromId(expired, false);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, false, Instant.now().minus(3L, ChronoUnit.DAYS));
         final String accessToken = tokenService.prependVersionAndEncodeAccessToken(
             tokenService.getTokenVersionCompatibility(),
-            userTokenId
+            newTokenBytes.v1()
         );
         PlainActionFuture<Tuple<Authentication, Map<String, Object>>> authFuture = new PlainActionFuture<>();
         tokenService.getAuthenticationAndMetadata(accessToken, authFuture);
@@ -811,16 +988,23 @@ public class TokenServiceTests extends ESTestCase {
     }
 
     public void testSupersedingTokenEncryption() throws Exception {
+        assumeTrue("Superseding tokens are only created in post 7.2 clusters", pre72OldNode == null);
         TokenService tokenService = createTokenService(tokenServiceEnabledSettings, Clock.systemUTC());
         Authentication authentication = AuthenticationTests.randomAuthentication(null, null);
         PlainActionFuture<TokenService.CreateTokenResult> tokenFuture = new PlainActionFuture<>();
-        final String refrehToken = UUIDs.randomBase64UUID();
-        final String newAccessToken = UUIDs.randomBase64UUID();
-        final String newRefreshToken = UUIDs.randomBase64UUID();
+        byte[] refreshTokenBytes = new byte[RAW_TOKEN_BYTES_TOTAL_LENGTH];
+        random().nextBytes(refreshTokenBytes);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(true);
         final byte[] iv = tokenService.getRandomBytes(TokenService.IV_BYTES);
         final byte[] salt = tokenService.getRandomBytes(TokenService.SALT_BYTES);
         final TransportVersion version = tokenService.getTokenVersionCompatibility();
-        String encryptedTokens = tokenService.encryptSupersedingTokens(newAccessToken, newRefreshToken, refrehToken, iv, salt);
+        String encryptedTokens = tokenService.encryptSupersedingTokens(
+            newTokenBytes.v1(),
+            newTokenBytes.v2(),
+            Base64.getUrlEncoder().encodeToString(refreshTokenBytes),
+            iv,
+            salt
+        );
         RefreshTokenStatus refreshTokenStatus = newRefreshTokenStatus(
             false,
             authentication,
@@ -831,17 +1015,23 @@ public class TokenServiceTests extends ESTestCase {
             Base64.getEncoder().encodeToString(salt)
         );
         refreshTokenStatus.setTransportVersion(version);
-        mockGetTokenAsyncForDecryptedToken(newAccessToken);
-        tokenService.decryptAndReturnSupersedingTokens(refrehToken, refreshTokenStatus, securityTokensIndex, authentication, tokenFuture);
-        if (version.onOrAfter(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS)) {
+        mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, false, null);
+        tokenService.decryptAndReturnSupersedingTokens(
+            Base64.getUrlEncoder().encodeToString(refreshTokenBytes),
+            refreshTokenStatus,
+            securityTokensIndex,
+            authentication,
+            tokenFuture
+        );
+        if (version.supports(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS)) {
             // previous versions serialized the access token encrypted and the cipher text was different each time (due to different IVs)
             assertThat(
-                tokenService.prependVersionAndEncodeAccessToken(version, newAccessToken),
+                tokenService.prependVersionAndEncodeAccessToken(version, newTokenBytes.v1()),
                 equalTo(tokenFuture.get().getAccessToken())
             );
         }
         assertThat(
-            TokenService.prependVersionAndEncodeRefreshToken(version, newRefreshToken),
+            TokenService.prependVersionAndEncodeRefreshToken(version, newTokenBytes.v2(), bytesRefRecycler),
             equalTo(tokenFuture.get().getRefreshToken())
         );
     }
@@ -853,21 +1043,14 @@ public class TokenServiceTests extends ESTestCase {
             .user(new User("joe", "admin"))
             .realmRef(new RealmRef("native_realm", "native", "node1"))
             .build(false);
-        final String userTokenId = UUIDs.randomBase64UUID();
-        UserToken token = new UserToken(
-            userTokenId,
-            tokenService.getTokenVersionCompatibility(),
-            authentication,
-            Instant.now().plusSeconds(180),
-            Collections.emptyMap()
-        );
-        mockGetTokenFromId(token, false);
+        Tuple<byte[], byte[]> newTokenBytes = tokenService.getRandomTokenBytes(randomBoolean());
+        mockGetTokenFromAccessTokenBytes(tokenService, newTokenBytes.v1(), authentication, false, Instant.now().plusSeconds(180));
         final String accessToken = tokenService.prependVersionAndEncodeAccessToken(
             tokenService.getTokenVersionCompatibility(),
-            userTokenId
+            newTokenBytes.v1()
         );
         final ThreadContext threadContext = new ThreadContext(Settings.EMPTY);
-        storeTokenHeader(threadContext, tokenService.prependVersionAndEncodeAccessToken(token.getTransportVersion(), accessToken));
+        storeTokenHeader(threadContext, accessToken);
 
         PlainActionFuture<UserToken> authFuture = new PlainActionFuture<>();
         when(licenseState.isAllowed(Security.TOKEN_SERVICE_FEATURE)).thenReturn(false);
@@ -875,11 +1058,6 @@ public class TokenServiceTests extends ESTestCase {
         tokenService.tryAuthenticateToken(bearerToken, authFuture);
         UserToken authToken = authFuture.actionGet();
         assertThat(authToken, Matchers.nullValue());
-    }
-
-    public void testHashedTokenIsUrlSafe() {
-        final String hashedId = TokenService.hashTokenString(UUIDs.randomBase64UUID());
-        assertEquals(hashedId, URLEncoder.encode(hashedId, StandardCharsets.UTF_8));
     }
 
     private TokenService createTokenService(Settings settings, Clock clock) throws GeneralSecurityException {
@@ -891,38 +1069,47 @@ public class TokenServiceTests extends ESTestCase {
             securityContext,
             securityMainIndex,
             securityTokensIndex,
-            clusterService
+            clusterService,
+            bytesRefRecycler
         );
     }
 
-    private void mockGetTokenFromId(TokenService tokenService, String accessToken, Authentication authentication, boolean isExpired) {
-        mockGetTokenFromId(tokenService, accessToken, authentication, Map.of(), isExpired, client);
+    private UserToken mockGetTokenFromAccessTokenBytes(
+        TokenService tokenService,
+        byte[] accessTokenBytes,
+        Authentication authentication,
+        boolean isInvalidated,
+        @Nullable Instant expirationTime
+    ) {
+        return mockGetTokenFromAccessTokenBytes(
+            tokenService,
+            accessTokenBytes,
+            authentication,
+            Map.of(),
+            isInvalidated,
+            expirationTime,
+            client
+        );
     }
 
-    public static void mockGetTokenFromId(
+    public static UserToken mockGetTokenFromAccessTokenBytes(
         TokenService tokenService,
-        String userTokenId,
+        byte[] accessTokenBytes,
         Authentication authentication,
         Map<String, Object> metadata,
-        boolean isExpired,
+        boolean isInvalidated,
+        @Nullable Instant expirationTime,
         Client client
     ) {
+        final UserToken userToken = buildUserToken(tokenService, accessTokenBytes, authentication, expirationTime, metadata);
         doAnswer(invocationOnMock -> {
             GetRequest request = (GetRequest) invocationOnMock.getArguments()[0];
             @SuppressWarnings("unchecked")
             ActionListener<GetResponse> listener = (ActionListener<GetResponse>) invocationOnMock.getArguments()[1];
             GetResponse response = mock(GetResponse.class);
-            TransportVersion tokenVersion = tokenService.getTokenVersionCompatibility();
-            final String possiblyHashedUserTokenId;
-            if (tokenVersion.onOrAfter(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS)) {
-                possiblyHashedUserTokenId = TokenService.hashTokenString(userTokenId);
-            } else {
-                possiblyHashedUserTokenId = userTokenId;
-            }
-            if (possiblyHashedUserTokenId.equals(request.id().replace("token_", ""))) {
+            if (userToken.getId().equals(request.id().replace("token_", ""))) {
                 when(response.isExists()).thenReturn(true);
                 Map<String, Object> sourceMap = new HashMap<>();
-                final UserToken userToken = buildUserToken(tokenService, userTokenId, authentication, metadata);
                 try (XContentBuilder builder = XContentBuilder.builder(XContentType.JSON.xContent())) {
                     userToken.toXContent(builder, ToXContent.EMPTY_PARAMS);
                     Map<String, Object> accessTokenMap = new HashMap<>();
@@ -930,7 +1117,13 @@ public class TokenServiceTests extends ESTestCase {
                         "user_token",
                         XContentHelper.convertToMap(XContentType.JSON.xContent(), Strings.toString(builder), false)
                     );
-                    accessTokenMap.put("invalidated", isExpired);
+                    accessTokenMap.put("invalidated", isInvalidated);
+                    if (userToken.getTransportVersion().supports(VERSION_GET_TOKEN_DOC_FOR_REFRESH)) {
+                        accessTokenMap.put(
+                            "token",
+                            Base64.getUrlEncoder().withoutPadding().encodeToString(sha256().digest(accessTokenBytes))
+                        );
+                    }
                     sourceMap.put("access_token", accessTokenMap);
                 }
                 when(response.getSource()).thenReturn(sourceMap);
@@ -938,129 +1131,132 @@ public class TokenServiceTests extends ESTestCase {
             listener.onResponse(response);
             return null;
         }).when(client).get(any(GetRequest.class), anyActionListener());
+        return userToken;
     }
 
     protected static UserToken buildUserToken(
         TokenService tokenService,
-        String userTokenId,
+        byte[] accessTokenBytes,
         Authentication authentication,
+        @Nullable Instant expirationTime,
         Map<String, Object> metadata
     ) {
         final TransportVersion tokenVersion = tokenService.getTokenVersionCompatibility();
-        final String possiblyHashedUserTokenId;
-        if (tokenVersion.onOrAfter(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS)) {
-            possiblyHashedUserTokenId = TokenService.hashTokenString(userTokenId);
-        } else {
-            possiblyHashedUserTokenId = userTokenId;
-        }
-
+        final String userTokenId = tokenDocIdFromAccessTokenBytes(accessTokenBytes, tokenVersion);
         final Authentication tokenAuth = authentication.token().maybeRewriteForOlderVersion(tokenVersion);
-        return new UserToken(possiblyHashedUserTokenId, tokenVersion, tokenAuth, tokenService.getExpirationTime(), metadata);
+        return new UserToken(
+            userTokenId,
+            tokenVersion,
+            tokenAuth,
+            expirationTime != null ? expirationTime : tokenService.getExpirationTime(),
+            metadata
+        );
     }
 
-    private void mockGetTokenFromId(UserToken userToken, boolean isExpired) {
-        doAnswer(invocationOnMock -> {
-            GetRequest request = (GetRequest) invocationOnMock.getArguments()[0];
-            @SuppressWarnings("unchecked")
-            ActionListener<GetResponse> listener = (ActionListener<GetResponse>) invocationOnMock.getArguments()[1];
-            GetResponse response = mock(GetResponse.class);
-            final String possiblyHashedUserTokenId;
-            if (userToken.getTransportVersion().onOrAfter(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS)) {
-                possiblyHashedUserTokenId = TokenService.hashTokenString(userToken.getId());
-            } else {
-                possiblyHashedUserTokenId = userToken.getId();
-            }
-            if (possiblyHashedUserTokenId.equals(request.id().replace("token_", ""))) {
-                when(response.isExists()).thenReturn(true);
-                Map<String, Object> sourceMap = new HashMap<>();
-                try (XContentBuilder builder = XContentBuilder.builder(XContentType.JSON.xContent())) {
-                    userToken.toXContent(builder, ToXContent.EMPTY_PARAMS);
-                    Map<String, Object> accessTokenMap = new HashMap<>();
-                    Map<String, Object> userTokenMap = XContentHelper.convertToMap(
-                        XContentType.JSON.xContent(),
-                        Strings.toString(builder),
-                        false
-                    );
-                    userTokenMap.put("id", possiblyHashedUserTokenId);
-                    accessTokenMap.put("user_token", userTokenMap);
-                    accessTokenMap.put("invalidated", isExpired);
-                    sourceMap.put("access_token", accessTokenMap);
-                }
-                when(response.getSource()).thenReturn(sourceMap);
-            }
-            listener.onResponse(response);
-            return Void.TYPE;
-        }).when(client).get(any(GetRequest.class), anyActionListener());
-    }
-
-    private void mockFindTokenFromRefreshToken(String refreshToken, UserToken userToken, @Nullable RefreshTokenStatus refreshTokenStatus) {
-        String storedRefreshToken;
-        if (userToken.getTransportVersion().onOrAfter(TokenService.VERSION_HASHED_TOKENS)) {
-            storedRefreshToken = TokenService.hashTokenString(refreshToken);
+    // public for tests
+    public static String tokenDocIdFromAccessTokenBytes(byte[] accessTokenBytes, TransportVersion tokenVersion) {
+        if (tokenVersion.supports(TokenService.VERSION_GET_TOKEN_DOC_FOR_REFRESH)) {
+            MessageDigest userTokenIdDigest = sha256();
+            userTokenIdDigest.update(accessTokenBytes, RAW_TOKEN_BYTES_LENGTH, RAW_TOKEN_DOC_ID_BYTES_LENGTH);
+            return Base64.getUrlEncoder().withoutPadding().encodeToString(userTokenIdDigest.digest());
+        } else if (tokenVersion.supports(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS)) {
+            return TokenService.hashTokenString(Base64.getUrlEncoder().withoutPadding().encodeToString(accessTokenBytes));
         } else {
-            storedRefreshToken = refreshToken;
+            return Base64.getUrlEncoder().withoutPadding().encodeToString(accessTokenBytes);
         }
-        doAnswer(invocationOnMock -> {
-            final SearchRequest request = (SearchRequest) invocationOnMock.getArguments()[0];
-            @SuppressWarnings("unchecked")
-            final ActionListener<SearchResponse> listener = (ActionListener<SearchResponse>) invocationOnMock.getArguments()[1];
-            final SearchResponse response = mock(SearchResponse.class);
-
-            assertThat(request.source().query(), instanceOf(BoolQueryBuilder.class));
-            BoolQueryBuilder bool = (BoolQueryBuilder) request.source().query();
-            assertThat(bool.filter(), hasSize(2));
-
-            assertThat(bool.filter().get(0), instanceOf(TermQueryBuilder.class));
-            TermQueryBuilder docType = (TermQueryBuilder) bool.filter().get(0);
-            assertThat(docType.fieldName(), is("doc_type"));
-            assertThat(docType.value(), is("token"));
-
-            assertThat(bool.filter().get(1), instanceOf(TermQueryBuilder.class));
-            TermQueryBuilder refreshFilter = (TermQueryBuilder) bool.filter().get(1);
-            assertThat(refreshFilter.fieldName(), is("refresh_token.token"));
-            assertThat(refreshFilter.value(), is(storedRefreshToken));
-
-            final RealmRef realmRef = new RealmRef(
-                refreshTokenStatus == null ? randomAlphaOfLength(6) : refreshTokenStatus.getAssociatedRealm(),
-                "test",
-                randomAlphaOfLength(12)
-            );
-            final Authentication clientAuthentication = AuthenticationTestHelper.builder()
-                .user(new User(refreshTokenStatus == null ? randomAlphaOfLength(8) : refreshTokenStatus.getAssociatedUser()))
-                .realmRef(realmRef)
-                .build(false);
-
-            final SearchHit hit = new SearchHit(randomInt(), "token_" + TokenService.hashTokenString(userToken.getId()));
-            BytesReference source = TokenService.createTokenDocument(userToken, storedRefreshToken, clientAuthentication, Instant.now());
-            if (refreshTokenStatus != null) {
-                var sourceAsMap = XContentHelper.convertToMap(source, false, XContentType.JSON).v2();
-                @SuppressWarnings("unchecked")
-                var refreshTokenSource = (Map<String, Object>) sourceAsMap.get("refresh_token");
-                refreshTokenSource.put("invalidated", refreshTokenStatus.isInvalidated());
-                refreshTokenSource.put("refreshed", refreshTokenStatus.isRefreshed());
-                source = XContentTestUtils.convertToXContent(sourceAsMap, XContentType.JSON);
-            }
-            hit.sourceRef(source);
-
-            final SearchHits hits = new SearchHits(new SearchHit[] { hit }, null, 1);
-            when(response.getHits()).thenReturn(hits);
-            listener.onResponse(response);
-            return Void.TYPE;
-        }).when(client).search(any(SearchRequest.class), any());
     }
 
-    private void mockGetTokenAsyncForDecryptedToken(String accessToken) {
-        doAnswer(invocationOnMock -> {
-            GetRequest request = (GetRequest) invocationOnMock.getArguments()[0];
+    private void mockTokenForRefreshToken(
+        byte[] accessTokenBytes,
+        byte[] refreshTokenBytes,
+        TokenService tokenService,
+        Authentication authentication,
+        @Nullable RefreshTokenStatus refreshTokenStatus
+    ) throws IOException {
+        UserToken userToken = buildUserToken(tokenService, accessTokenBytes, authentication, null, Map.of());
+        final String storedAccessToken;
+        final String storedRefreshToken;
+        if (userToken.getTransportVersion().supports(VERSION_GET_TOKEN_DOC_FOR_REFRESH)) {
+            storedAccessToken = Base64.getUrlEncoder().withoutPadding().encodeToString(sha256().digest(accessTokenBytes));
+            storedRefreshToken = Base64.getUrlEncoder().withoutPadding().encodeToString(sha256().digest(refreshTokenBytes));
+        } else if (userToken.getTransportVersion().supports(TokenService.VERSION_HASHED_TOKENS)) {
+            storedAccessToken = null;
+            storedRefreshToken = TokenService.hashTokenString(Base64.getUrlEncoder().withoutPadding().encodeToString(refreshTokenBytes));
+        } else {
+            storedAccessToken = null;
+            storedRefreshToken = Base64.getUrlEncoder().withoutPadding().encodeToString(refreshTokenBytes);
+        }
+        final RealmRef realmRef = new RealmRef(
+            refreshTokenStatus == null ? randomAlphaOfLength(6) : refreshTokenStatus.getAssociatedRealm(),
+            "test",
+            randomAlphaOfLength(12)
+        );
+        final Authentication clientAuthentication = AuthenticationTestHelper.builder()
+            .user(new User(refreshTokenStatus == null ? randomAlphaOfLength(8) : refreshTokenStatus.getAssociatedUser()))
+            .realmRef(realmRef)
+            .build(false);
+
+        BytesReference source = TokenService.createTokenDocument(
+            userToken,
+            storedAccessToken,
+            storedRefreshToken,
+            clientAuthentication,
+            Instant.now()
+        );
+        if (refreshTokenStatus != null) {
+            var sourceAsMap = XContentHelper.convertToMap(source, false, XContentType.JSON).v2();
             @SuppressWarnings("unchecked")
-            ActionListener<GetResponse> listener = (ActionListener<GetResponse>) invocationOnMock.getArguments()[1];
-            GetResponse response = mock(GetResponse.class);
-            if (request.id().replace("token_", "").equals(TokenService.hashTokenString(accessToken))) {
-                when(response.isExists()).thenReturn(true);
-            }
-            listener.onResponse(response);
-            return Void.TYPE;
-        }).when(client).get(any(GetRequest.class), anyActionListener());
+            var refreshTokenSource = (Map<String, Object>) sourceAsMap.get("refresh_token");
+            refreshTokenSource.put("invalidated", refreshTokenStatus.isInvalidated());
+            refreshTokenSource.put("refreshed", refreshTokenStatus.isRefreshed());
+            source = XContentTestUtils.convertToXContent(sourceAsMap, XContentType.JSON);
+        }
+        final BytesReference docSource = source;
+        if (userToken.getTransportVersion().supports(VERSION_GET_TOKEN_DOC_FOR_REFRESH)) {
+            doAnswer(invocationOnMock -> {
+                GetRequest request = (GetRequest) invocationOnMock.getArguments()[0];
+                @SuppressWarnings("unchecked")
+                ActionListener<GetResponse> listener = (ActionListener<GetResponse>) invocationOnMock.getArguments()[1];
+                GetResponse response = mock(GetResponse.class);
+                if (userToken.getId().equals(request.id().substring("token_".length()))) {
+                    when(response.isExists()).thenReturn(true);
+                    when(response.getSource()).thenReturn(XContentHelper.convertToMap(docSource, false, XContentType.JSON).v2());
+                }
+                listener.onResponse(response);
+                return null;
+            }).when(client).get(any(GetRequest.class), anyActionListener());
+        } else {
+            doAnswer(invocationOnMock -> {
+                final SearchRequest request = (SearchRequest) invocationOnMock.getArguments()[0];
+                @SuppressWarnings("unchecked")
+                final ActionListener<SearchResponse> listener = (ActionListener<SearchResponse>) invocationOnMock.getArguments()[1];
+                final SearchResponse response = mock(SearchResponse.class);
+
+                assertThat(request.source().query(), instanceOf(BoolQueryBuilder.class));
+                BoolQueryBuilder bool = (BoolQueryBuilder) request.source().query();
+                assertThat(bool.filter(), hasSize(2));
+
+                assertThat(bool.filter().get(0), instanceOf(TermQueryBuilder.class));
+                TermQueryBuilder docType = (TermQueryBuilder) bool.filter().get(0);
+                assertThat(docType.fieldName(), is("doc_type"));
+                assertThat(docType.value(), is("token"));
+
+                assertThat(bool.filter().get(1), instanceOf(TermQueryBuilder.class));
+                TermQueryBuilder refreshFilter = (TermQueryBuilder) bool.filter().get(1);
+                assertThat(refreshFilter.fieldName(), is("refresh_token.token"));
+                final SearchHits hits;
+                if (storedRefreshToken.equals(refreshFilter.value())) {
+                    SearchHit hit = SearchHit.unpooled(randomInt(), "token_" + userToken.getId());
+                    hit.sourceRef(docSource);
+                    hits = SearchHits.unpooled(new SearchHit[] { hit }, null, 1);
+                } else {
+                    hits = SearchHits.EMPTY_WITH_TOTAL_HITS;
+                }
+                when(response.getHits()).thenReturn(hits);
+                listener.onResponse(response);
+                return Void.TYPE;
+            }).when(client).search(any(SearchRequest.class), any());
+        }
     }
 
     public static void assertAuthentication(Authentication result, Authentication expected) {
@@ -1085,16 +1281,8 @@ public class TokenServiceTests extends ESTestCase {
         discoBuilder.add(anotherDataNode);
         final ClusterState.Builder newStateBuilder = ClusterState.builder(currentState);
         newStateBuilder.nodes(discoBuilder);
-        newStateBuilder.putTransportVersion(anotherDataNode.getId(), transportVersion);
+        newStateBuilder.putCompatibilityVersions(anotherDataNode.getId(), transportVersion, SystemIndices.SERVER_SYSTEM_MAPPINGS_VERSIONS);
         setState(clusterService, newStateBuilder.build());
         return anotherDataNode;
-    }
-
-    private String generateAccessToken(TokenService tokenService, TransportVersion version) throws Exception {
-        String accessTokenString = UUIDs.randomBase64UUID();
-        if (version.onOrAfter(TokenService.VERSION_ACCESS_TOKENS_AS_UUIDS)) {
-            accessTokenString = TokenService.hashTokenString(accessTokenString);
-        }
-        return tokenService.prependVersionAndEncodeAccessToken(version, accessTokenString);
     }
 }
