@@ -7,20 +7,21 @@
 
 package org.elasticsearch.xpack.transform.transforms.common;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.ElasticsearchStatusException;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.index.IndexRequest;
-import org.elasticsearch.action.search.SearchAction;
 import org.elasticsearch.action.search.SearchRequest;
 import org.elasticsearch.action.search.SearchResponse;
-import org.elasticsearch.action.support.IndicesOptions;
+import org.elasticsearch.action.search.TransportSearchAction;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.common.ValidationException;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.rest.RestStatus;
-import org.elasticsearch.search.aggregations.Aggregations;
+import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.aggregations.bucket.composite.CompositeAggregation;
 import org.elasticsearch.search.aggregations.bucket.composite.CompositeAggregationBuilder;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
@@ -33,9 +34,9 @@ import org.elasticsearch.xpack.core.transform.transforms.TransformProgress;
 import org.elasticsearch.xpack.transform.transforms.Function;
 import org.elasticsearch.xpack.transform.transforms.pivot.AggregationResultUtils;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.elasticsearch.core.Strings.format;
@@ -44,6 +45,7 @@ import static org.elasticsearch.core.Strings.format;
  * Basic abstract class for implementing a transform function that utilizes composite aggregations
  */
 public abstract class AbstractCompositeAggFunction implements Function {
+    private static final Logger logger = LogManager.getLogger(AbstractCompositeAggFunction.class);
 
     public static final int TEST_QUERY_PAGE_SIZE = 50;
     public static final String COMPOSITE_AGGREGATION_NAME = "_transform";
@@ -76,30 +78,39 @@ public abstract class AbstractCompositeAggFunction implements Function {
             headers,
             ClientHelper.TRANSFORM_ORIGIN,
             client,
-            SearchAction.INSTANCE,
-            buildSearchRequest(sourceConfig, timeout, numberOfBuckets),
-            ActionListener.wrap(r -> {
+            TransportSearchAction.TYPE,
+            buildSearchRequestForValidation("preview", sourceConfig, timeout, numberOfBuckets),
+            listener.delegateFailureAndWrap((l, r) -> {
                 try {
-                    final Aggregations aggregations = r.getAggregations();
+                    final InternalAggregations aggregations = r.getAggregations();
                     if (aggregations == null) {
-                        listener.onFailure(
-                            new ElasticsearchStatusException("Source indices have been deleted or closed.", RestStatus.BAD_REQUEST)
+                        l.onFailure(
+                            new ElasticsearchStatusException(SourceAccessDiagnostics.diagnoseSourceAccessFailure(r), RestStatus.BAD_REQUEST)
                         );
                         return;
                     }
                     final CompositeAggregation agg = aggregations.get(COMPOSITE_AGGREGATION_NAME);
-                    TransformIndexerStats stats = new TransformIndexerStats();
-                    TransformProgress progress = new TransformProgress();
+                    if (agg == null || agg.getBuckets().isEmpty()) {
+                        l.onResponse(Collections.emptyList());
+                        return;
+                    }
 
-                    List<Map<String, Object>> docs = extractResults(agg, fieldTypeMap, stats, progress).map(
-                        this::documentTransformationFunction
-                    ).collect(Collectors.toList());
+                    var stats = new TransformIndexerStats();
+                    var progress = new TransformProgress();
+                    var docs = extractResults(agg, fieldTypeMap, stats, progress).map(doc -> {
+                        var docId = (String) doc.get(TransformField.DOCUMENT_ID_FIELD);
+                        doc = documentTransformationFunction(doc);
+                        return Map.ofEntries(
+                            Map.entry(TransformField.DOCUMENT_ID_FIELD, docId),
+                            Map.entry(TransformField.DOCUMENT_SOURCE_FIELD, doc)
+                        );
+                    }).toList();
 
-                    listener.onResponse(docs);
+                    l.onResponse(docs);
                 } catch (AggregationResultUtils.AggregationExtractionException extractionException) {
-                    listener.onFailure(new ElasticsearchStatusException(extractionException.getMessage(), RestStatus.BAD_REQUEST));
+                    l.onFailure(new ElasticsearchStatusException(extractionException.getMessage(), RestStatus.BAD_REQUEST));
                 }
-            }, listener::onFailure)
+            })
         );
     }
 
@@ -111,12 +122,12 @@ public abstract class AbstractCompositeAggFunction implements Function {
         TimeValue timeout,
         ActionListener<Boolean> listener
     ) {
-        SearchRequest searchRequest = buildSearchRequest(sourceConfig, timeout, TEST_QUERY_PAGE_SIZE);
+        SearchRequest searchRequest = buildSearchRequestForValidation("validate", sourceConfig, timeout, TEST_QUERY_PAGE_SIZE);
         ClientHelper.executeWithHeadersAsync(
             headers,
             ClientHelper.TRANSFORM_ORIGIN,
             client,
-            SearchAction.INSTANCE,
+            TransportSearchAction.TYPE,
             searchRequest,
             ActionListener.wrap(response -> {
                 if (response == null) {
@@ -130,6 +141,19 @@ public abstract class AbstractCompositeAggFunction implements Function {
                         )
                     );
                     return;
+                }
+                // Null aggregations may indicate permission issues when accessing remote indices.
+                // We only fail validation when a security failure is positively identified (e.g.,
+                // ElasticsearchSecurityException in cluster or shard failures). We deliberately do NOT
+                // fail when no security failure is found, because null aggregations can also occur when
+                // a local wildcard index pattern resolves to zero indices -- a legitimate scenario for
+                // integrations that start transforms before source data exists (see #95562).
+                if (response.getAggregations() == null) {
+                    String diagnosis = SourceAccessDiagnostics.diagnoseSourceAccessFailure(response);
+                    if (diagnosis.equals(SourceAccessDiagnostics.SOURCE_INDICES_MISSING) == false) {
+                        listener.onFailure(new ValidationException().addValidationError(diagnosis));
+                        return;
+                    }
                 }
                 listener.onResponse(true);
             }, e -> {
@@ -153,7 +177,7 @@ public abstract class AbstractCompositeAggFunction implements Function {
         TransformIndexerStats stats,
         TransformProgress progress
     ) {
-        Aggregations aggregations = searchResponse.getAggregations();
+        InternalAggregations aggregations = searchResponse.getAggregations();
 
         // Treat this as a "we reached the end".
         // This should only happen when all underlying indices have gone away. Consequently, there is no more data to read.
@@ -188,17 +212,18 @@ public abstract class AbstractCompositeAggFunction implements Function {
         TransformProgress progress
     );
 
-    private SearchRequest buildSearchRequest(SourceConfig sourceConfig, TimeValue timeout, int pageSize) {
+    private SearchRequest buildSearchRequestForValidation(String logId, SourceConfig sourceConfig, TimeValue timeout, int pageSize) {
         SearchSourceBuilder sourceBuilder = new SearchSourceBuilder().query(sourceConfig.getQueryConfig().getQuery())
             .runtimeMappings(sourceConfig.getRuntimeMappings())
             .timeout(timeout);
         buildSearchQuery(sourceBuilder, null, pageSize);
-        return new SearchRequest(sourceConfig.getIndex()).source(sourceBuilder).indicesOptions(IndicesOptions.LENIENT_EXPAND_OPEN);
+        logger.debug("[{}] Querying {} for data: {}", logId, sourceConfig.getIndex(), sourceBuilder);
+        return new SearchRequest(sourceConfig.getIndex()).source(sourceBuilder).indicesOptions(sourceConfig.indicesOptions());
     }
 
     @Override
     public void getInitialProgressFromResponse(SearchResponse response, ActionListener<TransformProgress> progressListener) {
-        progressListener.onResponse(new TransformProgress(response.getHits().getTotalHits().value, 0L, 0L));
+        progressListener.onResponse(new TransformProgress(response.getHits().getTotalHits().value(), 0L, 0L));
     }
 
 }
